--- a/题目/2019年总结题目.md
+++ b/题目/2019年总结题目.md
@@ -1,120 +1,123 @@
 #### HTML 
-常见的兼容性问题
-项目中常使用优雅降级 或是 渐进增强
-开发中常用到的布局;手写双圣杯
-使用过哪些模板引擎 pug art baidu templeta-web
+- 常见的兼容性问题
+- 项目中常使用优雅降级 或是 渐进增强
+- 开发中常用到的布局;手写双圣杯
+- 使用过哪些模板引擎 pug art baidu templeta-web
 
 ### CSS
-预编译处理器  有css sass stylus，项目中如何使用 公共颜色是否抽离
-css3新属性写过 canvas运用实例
-有制定CSS规范么，NEC BEM了解么，什么是 CSS BEM？
-什么是BFC
-什么flex布局
-水平垂直居中实现方式，>=5种
-什么是重绘和节流
+- 预编译处理器  有css sass stylus，项目中如何使用 公共颜色是否抽离
+- css3新属性写过 canvas运用实例
+- 有制定CSS规范么，NEC BEM了解么，什么是 CSS BEM？
+- 什么是BFC 原理
+- 什么flex布局
+- 水平垂直居中实现方式，>=5种
+- 什么是回流和重绘
+- 解释rem
 
 
 ### JS
-经常使用的es6语法
-接口跨域的处理，几种方式介绍，怎么解决跨域？
-解释作用域和闭包是什么，什么是闭包，你可以举一个有用的例子吗？
-常用的js数组 字符串操作 map/forEach/filter/some/every/join/sort/slice/splice/indexOf/reduce
-在 JavaScript 中，你如何克隆一个对象的？什么是浅拷贝与深拷贝，如何深拷贝
-http状态码，http历史
-是否有echars百度地图开发经验，例如
-进行数据交互，若没提供数据怎样开发，mock数据与后台返回格式不同怎么办
-解释一下原型链,原型
-描述下call apply bind区别应用场景
-new 做了什么
-经常应用的设计模式
-防抖和节流应用场景
-url输入到页面加载经历什么
-tcp udp 三次握手
-TS语法,以及TS带来的好处？
-什么情况下会导致内存泄漏，常见有
-组合继承|原型继承|寄生式继承
-axios发送多接口
-== 和 === 相等运算符有什么区别？
-i++ 和 ++i 有什么不同？
-Promise 可以变成哪些状态？手写promise
-0.1 + 0.2 === 0.3 表达式的值是
-什么是 JavaScript 的数据类型？
-你是怎么避免回调地狱的？await async
-什么是递归，什么时候它是有用的？
-this 关键字是什么，它是如何工作的？
-对象数组转化,Object.keys|Object.values|Object.entries|Object.fromEntries
-eval
+- 基本数据类型有几种，分别是
+- 经常使用的es6语法
+- 接口跨域的处理，几种方式介绍，怎么解决跨域？
+- 解释作用域和闭包是什么，什么是闭包，你可以举一个有用的例子吗？
+- 常用的js数组 字符串操作 map/forEach/filter/some/every/join/sort/- slice/splice/indexOf/reduce 区别和应用场景
+- 在 JavaScript 中，你如何克隆一个对象的？什么是浅拷贝与深拷贝，如何深拷贝
+- http状态码，http历史
+- 是否有echars百度地图开发经验，例如 进行数据交互，若没提供数据怎样开发，mock数据与后台返回格式不同怎么办
+- 解释一下原型链,原型
+- 描述下call apply bind区别应用场景
+- new 做了什么
+- 经常应用的设计模式
+- 防抖和节流应用场景
+- url输入到页面加载经历什么
+- tcp udp 三次握手
+- TS语法,以及TS带来的好处？
+- 什么情况下会导致内存泄漏，常见有
+- 继承有哪些？组合继承|原型继承|寄生式继承
+- axios发送多接口
+- == 和 === 相等运算符有什么区别？
+- i++ 和 ++i 有什么不同？
+- Promise 可以变成哪些状态？手写promise
+- 0.1 + 0.2 === 0.3 表达式的值是
+- 什么是 JavaScript 的数据类型？
+- 你是怎么避免回调地狱的？await async
+- 什么是递归，什么时候它是有用的？
+- this 关键字是什么，它是如何工作的？
+对象数组转化,Object.keys|Object.values|Object.entries|- Object.fromEntries
+- eval
+- 任务队列是什么，解释Event Loop
 
 ### Vue
-vue中使用的组件 
-项目中是否使用字体图标，那家图标库，如何管理
-有看过前端组件element iview的源码么，有自己开发过么
-模块组件 以及 所整理过的的插件
-vue与react框架的选择
-生命周期react vue
-vue中的设计模式
-什么是MVVM，与 MVC 有什么区别
-双向数据绑定实现，vue源码
-组件通信几种方式
-nextTick原理
-keep-alive 的理解
-v-show 与 v-if 区别
-绑定 class 的数组用法
-computed 和 watch 的区别
-事件修饰符
-组件中data为什么是函数
-递归组件的要求
-自定义组件的语法糖 v-model 是怎样实现的
-Vuex 中 mutations 和 actions 的区别
-Render 函数
-怎样理解单向数据流
-vue依赖收集实现
-什么是 refs，我们如何使用它？
-Vue/React 的 diff 算法
+- vue中使用的组件 
+- 项目中是否使用字体图标，那家图标库，如何管理
+- 有看过前端组件element iview的源码么，有自己开发过么
+- 模块组件 以及 所整理过的的插件
+- vue与react框架的选择
+- 生命周期react vue
+- vue中的设计模式
+- 什么是MVVM，与 MVC 有什么区别
+- 双向数据绑定实现，vue源码
+- 组件通信几种方式
+- nextTick原理
+- keep-alive 的理解
+- v-show 与 v-if 区别
+- 绑定 class 的数组用法
+- computed 和 watch 的区别
+- 事件修饰符
+- 组件中data为什么是函数
+- 递归组件的要求
+- 自定义组件的语法糖 v-model 是怎样实现的
+- Vuex 中 mutations 和 actions 的区别
+- Render 函数
+- 怎样理解单向数据流
+- vue依赖收集实现
+- 什么是 refs，我们如何使用它？
+- Vue/React 的 diff 算法
 
 
 ### 小程序
-小程序生命周期
-小程序于H5 原生app差异
-小程序原理
+- 小程序生命周期
+- 小程序于H5 原生app差异
+- 小程序原理
 
 
 ### 框架
-express koa区别
-封装的组件库 
-lodash 模块化加载
-gulp配置过构建工具么
-webpack有写过脚手架么
-webpack配置项有哪些
-SSR实现过么
-webpack 打包出来的文件体积过大怎么办
+- express koa区别
+- 封装的组件库 
+- lodash 模块化加载
+- gulp配置过构建工具么
+- webpack有写过脚手架么
+- webpack配置项有哪些
+- SSR实现过么
+- webpack 打包出来的文件体积过大怎么办
 
 
 ### 算法
-排序有哪几种手写，算法时间复杂度
-去重方法几种写下来
-去和方式写下来
-判断是否包含某个值
-LeetCode有刷么
-最大值，
-树 图 二叉树 红黑树 契波那切数列
+- 排序有哪几种手写，算法时间复杂度 sort实现原理
+- 去重方法几种写下来
+- 去和方式写下来
+- 判断是否包含某个值
+- LeetCode有刷么
+- 最大值，
+- 树 图 二叉树 红黑树 契波那切数列
 
 
-### 优化
-性能优化方面  网站文件资源优化
-web安全 XSS CSRF 点击劫持
+### 优化安全
+- 性能优化方面  网站文件资源优化
+- web安全 XSS CSRF 点击劫持
+- 浏览器渲染过程
 
 
 ### 其他
-最近在学 半年打算学
-项目中项目挑战
-工作中如何 分工
-测试中的bug 如何处理
-测试流程
-前后端如何连调
-你最近有看过什么书？最近在研究的技术是什么？
-你未来3-5年的职业规划是什么？
-这个项目中你的角色是什么？你做了哪些？哪里又能够体现你的能力呢？
+- 最近在学 半年打算学
+- 项目中项目挑战
+- 工作中如何 分工
+- 测试中的bug 如何处理
+- 测试流程
+- 前后端如何连调
+- 你最近有看过什么书？最近在研究的技术是什么？
+- 你未来3-5年的职业规划是什么？
+- 这个项目中你的角色是什么？你做了哪些？哪里又能够体现你的能力呢？
 
 你的缺点
 >我的缺点是，**上面有所缺乏；
