--- a/JS/设计模式/职责链模式.md
+++ b/JS/设计模式/职责链模式.md
@@ -204,3 +204,5 @@ dataType () {
 ```
 
 职责链模式比较重要, 项目中能用到它的地方会有很多, 用上它能解耦 1 个请求对象和 n 个目标对象的关系。
+
+>[职责链](https://github.com/MuYunyun/blog/blob/master/BasicSkill/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/%E8%81%8C%E8%B4%A3%E9%93%BE%E6%A8%A1%E5%BC%8F.md)
