批量PDF生成过程

--- a/看法/有技术背景的人为什么恁厉害.md
+++ b/看法/有技术背景的人为什么恁厉害.md
@@ -2,11 +2,10 @@
 
 >很多产品经理对核心能力的关注不够，不是说完全没有关注，而是没有关注到位。核心能力不仅仅是功能，也包括性能。对于技术出身的产品经理，特别是做后台出来的，如果自己有能力、有信心做到对核心能力的关注，肯定会渴望将速度、后台做到极限
 
->技术人更懂技术的价值，也知道产品不是变出来的，是一行行代码敲出来的。以技术驱动发展，会留住优秀的技术人才并发挥他们的最大价值。纯粹把技术当做工具，不了解工程师的价值，不懂的释放技术的力量，在当今时代，注定会失败，早晚而已。
+- 为什么这些大公司和大佬希望管理者和经营者有技术背景呢？
+>1:技术人更懂技术的价值，也知道产品不是变出来的，是一行行代码敲出来的。以技术驱动发展，会留住优秀的技术人才并发挥他们的最大价值。纯粹把技术当做工具，不了解工程师的价值，不懂的释放技术的力量，在当今时代，注定会失败，早晚而已。
 
->无论是互联网服务还是软件产品，都是技术人员开发出来的，这是个很复杂的事，用软件工程的话来说，没银弹。甚至没有子弹。但在现实生活中，很多需求方都希望，今天提需求，明儿就上线，或者刚提出个原始需求，就问研发团队要明确的上线时间。还有的喜欢定个 deadline，然后倒推，需求、设计、研发、测试、集成、上线等等。基本上都是瞎扯淡。这种做法毁掉了无数项目和产品。
-
->但是，如果你之前就在产品和项目堆里摸爬滚打，就不会有这种幼稚的想法。只有打过硬仗的人，才知道血是热的，刀锋湿冷。
+>2:无论是互联网服务还是软件产品，都是技术人员开发出来的，这是个很复杂的事，用软件工程的话来说，没银弹。甚至没有子弹。但在现实生活中，很多需求方都希望，今天提需求，明儿就上线，或者刚提出个原始需求，就问研发团队要明确的上线时间。还有的喜欢定个 deadline，然后倒推，需求、设计、研发、测试、集成、上线等等。基本上都是瞎扯淡。这种做法毁掉了无数项目和产品。但是，如果你之前就在产品和项目堆里摸爬滚打，就不会有这种幼稚的想法。只有打过硬仗的人，才知道血是热的，刀锋湿冷。
 
 >阮一峰的《未来世界的幸存者》有句话：
 
