新人如何快速融入技术实力强的前端团队

--- a/看法/有技术背景的人为什么恁厉害.md
+++ b/看法/有技术背景的人为什么恁厉害.md
@@ -1,3 +1,7 @@
+### 有技术背景的人为什么恁厉害
+
+觉得有些话说的挺好的，就摘抄过来，一来提高认知，二来提高见识
+
 >产品和服务是需要大量技术背景的，我们希望的产品经理是非常资深的，做过前端、后端开发的技术研发人员晋升而来。好的产品最好交到一个有技术能力、有经验的人员手上，这样会让大家更加放心。
 
 >很多产品经理对核心能力的关注不够，不是说完全没有关注，而是没有关注到位。核心能力不仅仅是功能，也包括性能。对于技术出身的产品经理，特别是做后台出来的，如果自己有能力、有信心做到对核心能力的关注，肯定会渴望将速度、后台做到极限
