--- a/想法/新人如何快速融入技术实力强的前端团队.md
+++ b/想法/新人如何快速融入技术实力强的前端团队.md
@@ -7,9 +7,9 @@
 >技术强的团队，一定是靠技术骨干撑起来的,技术骨干身上所具备的特征
 
 - 较强的学习能力
-  > 凡是提高效率的手段，在 ToB 的业务场景下都需要积极研究，谨慎落地，这就需要工程师有快速适应的能力，以开放的心态拥抱社区的优秀方案。
+  > 凡是提高效率的手段，在 ToB 的业务场景下都需要积极研究，谨慎落地，这就需要工程师有快速适应的能力，以开放的心态 **``拥抱社区``** 的优秀方案。
 - 较强的项目合作能力
-  > 参与时候所合作的业务方/产品/设计/服务端也都不同，需要工程师跟合作方有效率的沟通，快速消化理解产品的交互形态和背后的业务路径，才能在项目中有效的发现和解决出现的问题。
+  > 参与时候所合作的业务方/产品/设计/服务端也都不同，需要工程师跟合作方有效率的沟通，快速消化理解产品的 **``交互形态和背后的业务路径``** ，才能在项目中有效的发现和解决出现的问题。
 - 跨端编程和体验优化能力
   > 不同的端意味着不同的物理设备和使用场景，也意味着不同的用户人群。比如 PC 端跟 App 不同，iOS/Android App 跟微信小程序又不同。它们背后的技术栈也有差异，比如宿主环境、布局原理、系统规范、接口能力都不同，这就需要工程师对不同的端都有理解。不仅在编程技巧、工程健壮性、跨端组件复用上面有较好的实践，同时对于用户真实的端交互方式和使用体验也有更加准确的判断。前端是在用户体验上最接近用户的群体，因为前端的工作就是用代码来输出体验。
 
@@ -32,7 +32,7 @@
 
 >技术讨论/技术分享/技术影响力/技术的行业趋势/技术的应用场景
 
-### 通过执行力来输出自己的责任感
+### **``通过执行力来输出自己的责任感``**
 >在没有了解足够多的团队工程技术栈之前，以及在没有理解足够的产品和业务之前，往往对于新人最大的挑战就是任务的及时完成。这个任务可能是独立承担，也可能是有一个小组长分配给自己，或者是与别人共同完成，头几个月的完成度和完成率非常关键，在这个过程中的责任感的传达是关键中的关键
 
 >而责任感传达的最好方式，就是你的执行力和主动性。执行力就是说到做到，无论是要通宵还是要周末无休，拿到结果就是底线。同样主动的沟通进度和上报风险则是一项软技能，不能因为好面子或者怕失去信任而强行大包大揽。这样造成无法完成的结果，对自己对团队都是不够负责任的表现，所以在拼死完成和必要的风险上抛求助之间是要有一个度自己反复拿捏的。
