--- a/题目/2019年总结题目.md
+++ b/题目/2019年总结题目.md
@@ -146,6 +146,9 @@
   >进一步了解他们要做哪些审查、合并提交代码的平均时间等。他们会非常挑剔吗？还是不怎么严格，漏掉大量错误？他们是真的很在乎还是只是在显摆自己的知识？测试怎么样？他们多久发布一次呢？
 - 解释一个你最近遇到的技术挑战
 - 附加题：新员工的入职计划是什么？你该如何让新入职成员融入团队？
+- 任何公司都有好的有不好的，你能不能分享一下你最喜欢这个公司的地方和最不喜欢的地方？
+- 目前贵公司或是贵团队最需要解决什么样的问题？我能帮贵公司做些什么？能不能给我一些资料我先了解一下，
+- 这样我后面如果能进来，就能上手更快一些了。
 
 技术：
 - 公司用的技术栈 
