--- a/相亲/问题.md
+++ b/相亲/问题.md
@@ -11,3 +11,22 @@
 
 >你要观察，对方会不会主动接你的话，而你也会不会主动地接他的话。如果都是一问一答，那说明对方是态度问题而不是性格问题。如果对方会分享感受、甚至反问你，说明他也愿意了解你，那你们聊下去不会有任何问题。
 
+
+
+#### 道理
+- 1.无论是怎么介绍的，无论是谈了多久，尽量不要微信或者其他网络手段沟通太多，保留话题，找个不偏僻的地方，坐下吃饭或者喝茶喝咖啡见面谈。如果对方不愿意出来，千万不要骚聊。打电话发信息是为了约见面，如果满意可以这次定好下次见面的时间
+- 2.饭钱谁来拿，不是一个用来讨论的话题。尽量你去拿。别人给你介绍对象，你总不能让对方女孩拿钱吧，回去介绍人会比较尴尬。你和女生没谈成以后可能就没交集了。可是给你介绍对象的人呢？
+- 一定要把话说明白，问明白。第一次见面，如果你觉得目前对方比较满意，那么要跟她说，并且问一下，对方的满意程度。如果你不满意，也不要跟她直接说。不满意，以后不约，不聊就是了。
+- .介绍人。你两个接触后，一定要跟介绍人说明白自己的想法。介绍人会作为一个传话的人，把你的想法通知给她的。当然，介绍人得靠谱。
+- 如果对方第一次问到你的工资，或者财产。你可以先反问对方的收入。她不说你也可以不说。她说了，那如果你跟她差不多就直说。如果你比她多太多，那就跟她说比他多一些，不要超的太过分，别伤了对方自尊。如果你比她差，少太多，那你就要慎重考虑一下了。如果对方没问，你也不要问了。
+- 一定要对介绍人负责，别人给你介绍对象，那是帮你，是出于好意。不能伤害介绍人的关系。所以对相亲另一方，一定要友善，要有诚意，有意见要保留，不能当面让对方难堪，如果喜欢也不能直接舔。如果条件不是很差，那应该事后送点东西之类的感谢感谢，如果成了，更应该请对方吃吃饭之类的，就算没成，也应该感谢介绍人。不然你在介绍人那臭了，以后谁还敢给你介绍啊？
+- 
+
+
+
+
+要求：
+身高：净身高175+
+学历：本科+
+兴趣：不玩游戏，爱做饭，干净，脾气好，性格沉稳，不抽烟不喝酒
+接受年龄范围：94-91
