--- a/其他/相亲/问题.md
+++ b/其他/相亲/问题.md
@@ -12,4 +12,5 @@
 - 一定要把话说明白，问明白。第一次见面，如果你觉得目前对方比较满意，那么要跟她说，并且问一下，对方的满意程度。如果你不满意，也不要跟她直接说。不满意，以后不约，不聊就是了。
 - .介绍人。你两个接触后，一定要跟介绍人说明白自己的想法。介绍人会作为一个传话的人，把你的想法通知给她的。当然，介绍人得靠谱。
 - 如果对方第一次问到你的工资，或者财产。你可以先反问对方的收入。她不说你也可以不说。她说了，那如果你跟她差不多就直说。如果你比她多太多，那就跟她说比他多一些，不要超的太过分，别伤了对方自尊。如果你比她差，少太多，那你就要慎重考虑一下了。如果对方没问，你也不要问了。
-- 一定要对介绍人负责，别人给你介绍对象，那是帮你，是出于好意。不能伤害介绍人的关系。所以对相亲另一方，一定要友善，要有诚意，有意见要保留，不能当面让对方难堪，如果喜欢也不能直接舔。如果条件不是很差，那应该事后送点东西之类的感谢感谢，如果成了，更应该请对方吃吃饭之类的，就算没成，也应该感谢介绍人。不然你在介绍人那臭了，以后谁还敢给你介绍啊？
+- 一定要对介绍人负责，别人给你介绍对象，那是帮你，是出于好意。不能伤害介绍人的关系。所以对相亲另一方，一定要友善，要有诚意，有意见要保留，不能当面让对方难堪，如果喜欢也不能直接舔。如果条件不是很差，那应该事后送点东西之类的感谢感谢，如果成了，更应该请对方吃吃饭之类的，就算没成，也应该感谢介绍人。不然你在介绍人那臭了，以后谁还敢给你介绍啊
+
