--- a/其他/租房.md
+++ b/其他/租房.md
@@ -10,6 +10,7 @@
 - 各种家具需要一个个测试，防止桌子腿松动，柜子碎，沙发有损
 - 暖气无法测试还需要注意, 不配被暖气的需要注意冬季电费计算 
 - 合租注意房东是否同你们一起住；有房东同住不方便之处看底部
+- 尽可能租房同片区里最老的，到时候各种修
 ....未完待续, 继续coding
 
 
