--- a/其他/想法/新人如何快速融入技术实力强的前端团队.md
+++ b/其他/想法/新人如何快速融入技术实力强的前端团队.md
@@ -47,3 +47,13 @@
 >第一是让自己的优势弥补团队的短板；第二是让自己的执行力和责任感给团队成员注入一针信任剂；第三是制造一些惊喜让团队因你而变得更有趣。那么无论你的技术在团队内是强还是弱，你会更容易融入这样一个技术强的团队。
 
 [原文分享](https://juejin.im/post/5cb860a86fb9a06890705f14)
+
+1: 沟通规范
+2: 技术规范
+3: 质量和效率
+4: 提升
+5: 评估工时
+6: 请假
+7: 情绪压力生活
+8: 技术愿景，我们的方向
+9: 公司产品介绍之类
