--- a/题目/2019.7月面试官总结.md
+++ b/题目/2019.7月面试官总结.md
@@ -2,8 +2,8 @@
 ### CSS
   - 基础
     - 预编译器使用
-    - 什么是BFC原理
-    - 什么是回流和重绘
+    - **什么是BFC原理**
+    - **什么是回流和重绘**
   - 兼容
   - 新潮
     - 什么flex布局
@@ -12,14 +12,14 @@
 
 ### JS
   - 描述下call apply bind区别应用场景
-  - 解释下原型链
-  - 解释作用域和闭包是什么
+  - **解释下原型链**
+  - **解释作用域和闭包是什么**
   - new做了什么
   - 任务队列是什么，解释Event Loop
   - 常用的js数组 字符串操作 map/forEach/filter/some/every/join/sort/- slice/splice/indexOf/reduce 区别和应用场景
   - 经常使用的Es6语法
-  - 你如何克隆一个对象的？什么是浅拷贝与深拷贝，如何深拷贝
-  - 防抖和节流应用场景
+  - **你如何克隆一个对象的？什么是浅拷贝与深拷贝，如何深拷贝**
+  - **防抖和节流应用场景**
   - 接口跨域的处理，几种方式介绍，怎么解决跨域？
   - 继承方式
 
