--- a/题目/2019.7月面试官总结.md
+++ b/题目/2019.7月面试官总结.md
@@ -12,9 +12,10 @@
 
 ### JS
   - 描述下call apply bind区别应用场景
+  - 面向对象
   - **解释下原型链**
-  - **解释作用域和闭包是什么**
   - new做了什么
+  - **解释作用域和闭包是什么**
   - 任务队列是什么，解释Event Loop
   - 常用的js数组 字符串操作 map/forEach/filter/some/every/join/sort/- slice/splice/indexOf/reduce 区别和应用场景
   - 经常使用的Es6语法
@@ -22,6 +23,7 @@
   - **防抖和节流应用场景**
   - 接口跨域的处理，几种方式介绍，怎么解决跨域？
   - 继承方式
+
 
 
 ### Vue
