--- a/题目/1.md
+++ b/题目/1.md
@@ -2,8 +2,8 @@
 ### CSS
   - 基础
     - 预编译器使用
-    - **什么是BFC原理**
-    - **什么是回流和重绘**
+    - 什么是BFC原理
+    - 什么是回流和重绘
   - 兼容
   - 新潮
     - 什么flex布局
@@ -13,7 +13,8 @@
 ### JS
   - 描述下call apply bind区别应用场景
   - 面向对象
-  - **解释下原型链**
+  - 什么是原型、构造函数、实例、原型链关系
+  - 解释下原型链
   - new做了什么
   - **解释作用域和闭包是什么**
   - 任务队列是什么，解释Event Loop
@@ -23,7 +24,11 @@
   - **防抖和节流应用场景**
   - 接口跨域的处理，几种方式介绍，怎么解决跨域？
   - 继承方式
-
+  - 使用XMLHttpRequest创建一个get请求
+  - 对promise的理解
+  - VirtualDOM是什么。为什么要使用它
+  - DOM操作api；自定义事件
+  - 简述一下Vue中的render函数
 
 
 ### Vue
@@ -38,7 +43,7 @@
   - Vue高级语法
   - 为什么要依赖收集
   - 介绍nextTick
-  - vuex理解，源码有度过
+  - vuex理解，源码有度过·
   - 设计模式 - 几种最常用的设计模式。
   - 闭包为什么会造成内存泄漏？
   - 可以手写一些Promise么？
@@ -66,3 +71,6 @@
   - 前后端如何连调
   - 喜欢刷的博客
   - 这个项目中你的角色是什么？你做了哪些？哪里又能够体现你的能力呢？
+
+
+https://mp.weixin.qq.com/s/JKtD_AkdQyTB3MZ8ZddQ0w
