--- a/题目/2.md
+++ b/题目/2.md
@@ -8,7 +8,7 @@
 - 预编译处理器  有css sass stylus，项目中如何使用 公共颜色是否抽离
 - css3新属性写过 canvas运用实例
 - 有制定CSS规范么，NEC BEM了解么，什么是 CSS BEM？
-- 什么是BFC 原理
+- 什么是BFC原理
 - 什么flex布局
 - 水平垂直居中实现方式，>=5种
 - 什么是回流和重绘
@@ -98,7 +98,7 @@
 - 去和方式写下来
 - 判断是否包含某个值
 - LeetCode有刷么
-- 最大值，
+- 最大值
 - 树 图 二叉树 红黑树 契波那切数列
 
 
