--- a/题目/三年内.md
+++ b/题目/三年内.md
@@ -17,6 +17,7 @@ CSS
   - 作用域
   - 规范使用
   - 媒体查询
+  - BEM规范
 
 vue
   - 常用指令
@@ -29,12 +30,13 @@ vue
   - 设计模式
   - 常用组件库
   - 如何优化SPA应用的首屏加载速度慢的问题？
+  - mock数据如何伪造
 
 安全
   - http头都有 token
   - web安全 XSS CSRF 点击劫持
   - 浏览器渲染过程
-  - 性能优化方面  网站文件资源优化
+  - 性能优化方面 网站文件资源优化
   - 感兴趣方向
   - 三年职业规划
 
@@ -47,9 +49,8 @@ vue
 
 项目
   - 为这个项目的优化
-  - mock数据如何伪造
+  - 什么得意作品
   - 这个项目中你的角色是什么？你做了哪些？哪里又能够体现你的能力呢
-  - 项目中遇到了那些困难，如何解决的
-  - 联动调试
+  - 项目中遇到困难，如何解决的
   - 测试流程
   - 代码规范
