--- a/JS/基础/原型链.md
+++ b/JS/基础/原型链.md
@@ -59,3 +59,49 @@ var new2 = function(func) {
 }
 o6 = new2(M)
 ```
+
+
+
+
+
+
+
+
+
+```js
+// 实例|构造函数|原型 关系
+
+// 构造函数：
+function Animate (name) {
+  this.name = name
+}
+Animate.prototype.getName = function(){
+  return this.name
+}
+// 实例：
+var cat = new Animate 
+
+// 实例 - 构造函数
+cat.__proto__.constructor === Animate
+
+// 构造函数 - 原型
+
+Animate.prototype.constructor === Animate
+
+// 原型 - 实例
+Animate.prototype === cat.__proto__
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
