--- a/题目/三年内.md
+++ b/题目/三年内.md
@@ -31,6 +31,7 @@ vue
   - 常用组件库
   - 如何优化SPA应用的首屏加载速度慢的问题？
   - mock数据如何伪造
+  - 权限控制
 
 安全
   - http头都有 token
@@ -54,3 +55,8 @@ vue
   - 项目中遇到困难，如何解决的
   - 测试流程
   - 代码规范
+  - 项目的背景,这个项目是做什么的
+  - 可以表现能力的东西，框架还是什么都可以
+
+
+- 面试更应该是根据面试者简历做过的东西一点点去深挖，了解面试者对于问题的思考广度和深度。
