--- a/JS/基础/原型链.md
+++ b/JS/基础/原型链.md
@@ -8,48 +8,77 @@
 
 ### 创建对象有几种方法
 ```js
-var o1 = {name: 'o1'}   
-var o11 = new Object({name: 'o11)
+// 第一种
+var o1 = {name: 'o1'}  
+//第二种 
+var o2 = new Object({name: 'o2'})
 
-var M = function () {
-  this.name = 'o1'
+//第三种
+var O3 = function () {
+  this.name = 'o3'
 }
-var o1 = new M()
+var o3 = new O3()
 
-var P = {name: 'o3'}
-var o3 = Object.create(P)  o3.__propto__ = P
+//第四种
+var o4 = Object.create({name: 'o4'})  
 ```
 
 ### 原型、构造函数、实例、原型链
-  实例：var o11实例
-  构造函数：任何一个函数只要被new使用了，就可称之为构造函数
-    函数都有prototype属性，生明函数的时候js自动添加属性 prototype就是【原型对象】
-    原型对象，怎么区分，我是被哪个构造函数所引用的呢？ 
-      constructor属性指向一个函数 构造器 M.prototype.constructor === M  M的原型对象(prototype)的属性(constructor)严格指向函数本身
+  实例: o1 o2 o3 o4
+  构造函数：
+    定义：O3 任何一个函数只要被new使用了，就可称之为构造函数
+    特性：函数都有prototype属性，生明函数的时候js自动添加属性 prototype 就是【原型对象】
+         原型对象，怎么区分，我是被哪个构造函数所引用的呢？ 
+         constructor属性指向一个函数 构造器 O3.prototype.constructor === O3  O3的原型对象(prototype)的属性(constructor)严格指向函数本身
 
   实例/构造函数/原型对象的关联
       构造函数-实例： **构造函数** 通过**new** 与**实例**关联
       构造函数-原型对象：构造函数的**原型对象(prototype)**，通过**属性(constructor)**与函数保持关联
-      实例-原型对象：o3.__proto__ === M.prototype
+      实例-原型对象：o3.__proto__ === O3.prototype
     
   注意点：
     函数才有prototype 对象是没有的
-    只有实例对象才有__proto__, 函数也有__proto__; M.__proto__ === Function.prototype
+    只有实例对象才有__proto__, 函数也有__proto__; O3.__proto__ === Function.prototype
 
+  o3.__proto__ === O3.prototype
+  o3.__proto__.__proto__ === Object.prototype
+  o3.__proto__.__proto__.__proto__ === null
+
+  o3.__proto__.constructor === O3
+  o3.__proto__.__proto__.constructor === Object
 
 ### instanceof原理
+  既：解释：
+    cat instanceof Animate  === true
+    cat instanceof Object  === true
+    
   只要在这个原型链上的构造函数函数，都会被instanceof看作是O3的构造函数 
-    o3.__proto__ === M.prototype    //true
-    M.prototype.__proto__ = Object.prototype  // true
+    cat.__proto__ === Animate.prototype    //true
+    Animate.prototype.__proto__ = Object.prototype  // true
 
-    O3.__proto__.constructor === M   //true
-    O3.__proto__.constructor === Object   //false
+    cat.__proto__.constructor === Animate   //true
+    cat.__proto__.constructor === Object   //false
 
+```js
+function instanceOf(left, right) {
+  let leftValue = left.__proto__
+  let rightValue = right.prototype
+  while (true) {
+    if (leftValue === null) {
+      return false
+    }
+    if (leftValue === rightValue) {
+      return true
+    }
+    leftValue = leftValue.__proto__
+  }
+}
+```
 
 ### new运算符
 ```js
 var new2 = function(func) {
-  var o = Object.crate(func.prototype)
+  var o = Object.create(func.prototype)
   var k = func.call(o)
   if (typeof k === 'Object') {
     return k
@@ -57,16 +86,26 @@ var new2 = function(func) {
     return o
   }
 }
-o6 = new2(M)
+function M() {
+  this.name = 'm'
+  this.age = '12'
+  return {
+    name: this.name,
+    age: this.age
+  }
+}
+o6 = new2(M) //
 ```
-
-
-
-
-
-
-
-
+- 首先创建一个空的对象，空对象的__proto__属性指向构造函数的原型对象
+- 把上面创建的空对象赋值构造函数内部的this，用构造函数内部的方法修改空对象
+- 如果构造函数返回一个非基本类型的值，则返回这个值，否则上面创建的对象
+```js
+function _new(fn, ...arg) {
+    const obj = Object.create(fn.prototype);
+    const ret = fn.apply(obj, arg);
+    return ret instanceof Object ? ret : obj;
+}
+```
 
 ```js
 // 实例|构造函数|原型 关系
