ajax|去重|继承整理

--- a/JS/基础/原型链.md
+++ b/JS/基础/原型链.md
@@ -1,6 +1,7 @@
 ## 原型链
   - 创建对象有几种方法
   - 原型、构造函数、实例、原型链
+  - Object.create原理实现
   - instanceof原理
   - new运算符
 
@@ -73,6 +74,16 @@ function instanceOf(left, right) {
     leftValue = leftValue.__proto__
   }
 }
+```
+
+### Object.create原理实现
+```js
+function mycreate (Obj) {
+  function F() {}
+  F.prototype = Obj
+  return new F()
+}
+var test = mycreate({name: 'test'})
 ```
 
 ### new运算符
