--- a/JS/基础/深浅拷贝.md
+++ b/JS/基础/深浅拷贝.md
@@ -1,1 +1,26 @@
 ### 深浅拷贝
+
+### 浅拷贝
+```js
+var obj1 =  {name: 'obj1'}
+var obj2 = Object.assign({}, obj1)
+var obj2 = {...obj1}
+```
+
+### 深拷贝
+```js
+// 1. JOSN.stringify()/JSON.parse()
+let obj = {a: 1, b: {x: 3}}
+JSON.parse(JSON.stringify(obj))
+
+// 2. 递归拷贝
+function deepClone(obj) {
+  let copy = obj instanceof Array ? [] : {}
+  for (let i in obj) {
+    if (obj.hasOwnProperty(i)) {
+      copy[i] = typeof obj[i] === 'object' ? deepClone(obj[i]) : obj[i]
+    }
+  }
+  return copy
+}
+```
