数据操作 作用域

--- a/JS/基础/深浅拷贝.md
+++ b/JS/基础/深浅拷贝.md
@@ -12,6 +12,13 @@ var obj2 = {...obj1}
 // 1. JOSN.stringify()/JSON.parse()
 let obj = {a: 1, b: {x: 3}}
 JSON.parse(JSON.stringify(obj))
+//缺点
+// 对象的属性值是函数时，无法拷贝。
+// 原型链上的属性无法拷贝
+// 不能正确的处理 Date 类型的数据
+// 不能处理 RegExp
+// 会忽略 symbol
+// 会忽略 undefined
 
 // 2. 递归拷贝
 function deepClone(obj) {
