--- a/JS/基础/数组操作.md
+++ b/JS/基础/数组操作.md
@@ -23,11 +23,12 @@ arr.slice(2, -3) // [3, 4]
   howmay :删除多少个元素  if howmay=0标示不删除
   v:添加的元素
   改变原来数组
+  返回值，删除的数值
   
 ```js
 var arr = [1,2,3,4,5,6,7]
 arr.splice(1, 0, 'add')  //[1,'add',2,3,4,5,6,7]
 arr.splice(0, 0, 'add')  // ['add',1,2,3,4,5,6,7]
 arr.splice(1, 1, 'add')  //[1,'add', 3,4,5,6,7]
-arr.splice(1, 1, 'add')  //[1,3,4,5,6,7]
+arr.splice(1, 1)  //[1,3,4,5,6,7]
 ```
