--- a/其他/想法/管理/提升.md
+++ b/其他/想法/管理/提升.md
@@ -47,18 +47,8 @@ eslint➕stylelint➕husky➕lint-stage➕ci
 然后配合cr和checklist
 
 
-
-
-我这所处公司，目前业务阶段已经接近快速发展期，具化到前端招聘，策略和最初的 2 年多会有不同，我现在招人会侧重看这几点来判断：
-
-1）技术能力：基本功、选型熟悉度、方案沉淀、既往工作中的业务复杂度。
-2）想法和落地：是执行角色还是能思考“更好是什么”；推动落地的能力，既往工作中是否推动过建设，角色是什么，主导 Owner 还是共建执行。
-3）体系化能力：具化到业务流程体系的认知，前端技术体系的认知，一层层的聊，看到哪一层能卡主
-4）看性格：要性怎么样，是否有偏执型人格，沟通能力和情商如何（机灵和有心计是不同的概念），人品价值观味道如何（简单说就是谈下来你和陪同面试的愿不愿意和他做朋友）
-
-
-你这几点参考价值很高，目前我在面试环节总结了二个能力维度，
-一个是专业能力是指对专业知识的掌握能力，开发能力是指能不能合理利用专业知识解决业务需求，对前中台项目和移动端项目，需要这两项能力的侧重点和高低有区别，除此硬实力之外我想结合你这些点，要完善一下对软实力维度的评价标准
-
-再细化一线，专业能力考察，面试者要避免进入误圈，即过于侧重考察原理而忽视从你们业务场景出发的问题；
-避免只听面试者回答你关键字，要问他具体怎么写，有没其他方案，细节是什么。
+1. 写了个通用脚手架，避免项目模版搭建
+2. 写了不少脚本，帮助内部童靴校验， 加速运维相关的操作
+3. 写了一些内部chrome插件， 打通内部杂七杂八的平台连通性，比如一键生成日报，周报，项目进度
+4. 还有一些监控，报警发邮件， 谁的页面出错自己去check
+5. pptr自动测试等等
