--- a/JS/基础/安全.md
+++ b/JS/基础/安全.md
@@ -1,7 +1,7 @@
 ### Web安全
 
-1：XSS
-2：CSRF  Cross site Request Forgy 跨站请求伪造
+1：XSS XSS Cross Site Script 跨站脚本攻击
+2：CSRF  Cross site Request Forgery 跨站请求伪造
 3：Cookies
 4：点击劫持
 5：传输安全
@@ -10,7 +10,7 @@
 8：接入层上传问题
 9：社会工程学和信息泄露 OAuth  已经授权的用户 授权会过期  数据接口可风控审计 不允许批量查询
 10：其他安全问题 
-11：总结 
+11：总结
 
 
 #### 1：XSS
