--- a/题目/2019整合.md
+++ b/题目/2019整合.md
@@ -174,3 +174,5 @@ HR需主动介绍 - 福利待遇
 2）想法和落地：是执行角色还是能思考“更好是什么”；推动落地的能力，既往工作中是否推动过建设，角色是什么，主导 Owner 还是共建执行。
 3）体系化能力：具化到业务流程体系的认知，前端技术体系的认知，一层层的聊，看到哪一层能卡主
 4）看性格：要性怎么样，是否有偏执型人格，沟通能力和情商如何（机灵和有心计是不同的概念），人品价值观味道如何（简单说就是谈下来你和陪同面试的愿不愿意和他做朋友）
+
+[frontend-interview](https://lucifer.ren/fe-interview/#/?id=css-%f0%9f%a6%8b)
