Object.values Object.entries

--- a/题目/2019整合.md
+++ b/题目/2019整合.md
@@ -175,4 +175,32 @@ HR需主动介绍 - 福利待遇
 3）体系化能力：具化到业务流程体系的认知，前端技术体系的认知，一层层的聊，看到哪一层能卡主
 4）看性格：要性怎么样，是否有偏执型人格，沟通能力和情商如何（机灵和有心计是不同的概念），人品价值观味道如何（简单说就是谈下来你和陪同面试的愿不愿意和他做朋友）
 
+再细化一线，专业能力考察，面试者要避免进入误圈，即过于侧重考察原理而忽视从你们业务场景出发的问题；
+避免只听面试者回答你关键字，要问他具体怎么写，有没其他方案，细节是什么。
+
+
+- 技术广度&深度
+- 主动性
+  - 在工作中主动提建设性建议的例子
+  - 资源有限情况下，如何解决
+
+- 项目经验
+  - 是否参加过大型项目， 在项目中承担的职责
+  - 这些项目与我们公司相关性
+
+- 逻辑思维
+  - 请描述以往的工作/学习经历
+  - 描述项目中职责
+
+- 理解学习能力
+  - 最近一次更新你的知识机构是什么时候，什么原因促使更新，你是如何获得相应的知识的
+
+- 沟通团队协作
+  - 最挑战沟通方面问题，为什么认为那次最富有挑战性
+  - 工作遇到困难如何解决，你和团队有不同意见如何处理
+
+大公司重点去考察这个人是“自带体系型”的人，还是“体系内生存型”的人
+
+
+
 [frontend-interview](https://lucifer.ren/fe-interview/#/?id=css-%f0%9f%a6%8b)
