--- a/JS/基础/数组操作.md
+++ b/JS/基础/数组操作.md
@@ -22,7 +22,7 @@ arr.slice(2, -3) // [3, 4]
   index :从什么位置开始添加或删除
   howmay :删除多少个元素  if howmay=0标示不删除
   v:添加的元素
-  改变原来数组
+  **改变原来数组**
   返回值，删除的数值
   
 ```js
