--- a/经验/面试跳槽必备.md
+++ b/经验/面试跳槽必备.md
@@ -40,22 +40,9 @@
 
 **渲染机制**
 - 什么是DOCTYPE及作用
-![45cfad9177b5147c735a679d824a6ae6.png](evernotecid://9573F1D7-6DBC-4D5C-9DF2-A3381CB96512/appyinxiangcom/23838011/ENResource/p7)
-![17a6e3399ed1d663b782cd4923c95610.png](evernotecid://9573F1D7-6DBC-4D5C-9DF2-A3381CB96512/appyinxiangcom/23838011/ENResource/p8)
-
 - 浏览器渲染过程
-![ae1890d3caa03f2da3bbf078f892f96f.png](evernotecid://9573F1D7-6DBC-4D5C-9DF2-A3381CB96512/appyinxiangcom/23838011/ENResource/p9)
-![b6b400a3be7914ae12ffc470a75ec90f.png](evernotecid://9573F1D7-6DBC-4D5C-9DF2-A3381CB96512/appyinxiangcom/23838011/ENResource/p10)
-![0db12b25adeb35e710ed31ba4f3df65a.png](evernotecid://9573F1D7-6DBC-4D5C-9DF2-A3381CB96512/appyinxiangcom/23838011/ENResource/p11)
-![4651e6026284a21f848f39cbd4d06786.png](evernotecid://9573F1D7-6DBC-4D5C-9DF2-A3381CB96512/appyinxiangcom/23838011/ENResource/p12)
-![71b73ffcb88896fe35d82e8567f03892.png](evernotecid://9573F1D7-6DBC-4D5C-9DF2-A3381CB96512/appyinxiangcom/23838011/ENResource/p13)
-
 - 重排Reflow
-![3ebb9721cdf623cae18fa43ad1c2231b.png](evernotecid://9573F1D7-6DBC-4D5C-9DF2-A3381CB96512/appyinxiangcom/23838011/ENResource/p14)
-
 - 重绘Repaint
-![eb96376989fc56ae1bfe4d453f7fabb8.png](evernotecid://9573F1D7-6DBC-4D5C-9DF2-A3381CB96512/appyinxiangcom/23838011/ENResource/p15)
-
 - 布局Layout
 
 **js运行机制**
@@ -63,7 +50,6 @@
    - 单线程 同一时间只能做一件事
  - 什么是任务队列
    - 任务队列 同步|异步 异步任务要挂起，同步任务执行完毕，执行异步任务 （异步任务的放入时间 和 执行时间）
-   
  - 什么是 Event Loop
     执行栈：执行了同步任务
     什么时候取任务：
@@ -137,22 +123,12 @@ css放前 js放后 图片预加载
 减少DOM操作，多个DOM操作合并
 事件节流 事件提前执行 
 
-![864f4d9c4909605825543c36daf523c0.png](evernotecid://9573F1D7-6DBC-4D5C-9DF2-A3381CB96512/appyinxiangcom/23838011/ENResource/p16)
-![7339cc21710b745aebd350f29efb91d2.png](evernotecid://9573F1D7-6DBC-4D5C-9DF2-A3381CB96512/appyinxiangcom/23838011/ENResource/p17)
-![00384dd514af3e188f194b1f3d168011.png](evernotecid://9573F1D7-6DBC-4D5C-9DF2-A3381CB96512/appyinxiangcom/23838011/ENResource/p18)
-
-
 **错误监控**
 - 前端错误分类
-![3fa5ca8da591681b54a8677d51637fda.png](evernotecid://9573F1D7-6DBC-4D5C-9DF2-A3381CB96512/appyinxiangcom/23838011/ENResource/p19)
-
 - 错误捕获方法 事件模型
-![8d3ac5b1e967e454e8ce3bd196c68916.png](evernotecid://9573F1D7-6DBC-4D5C-9DF2-A3381CB96512/appyinxiangcom/23838011/ENResource/p20)
-
 - 上报错误基本原理
 1: ajax通信上报 （可以做通常不）
 2: 利用image对象上报
-![c9e1549efda6294cb73740cdcef9ef29.png](evernotecid://9573F1D7-6DBC-4D5C-9DF2-A3381CB96512/appyinxiangcom/23838011/ENResource/p21)
 
 #### 五、业务能力
 **三面上面说项目优势点**
@@ -169,18 +145,17 @@ css放前 js放后 图片预加载
 - 业务能力 
     - 被动回答
     > 我做过什么业务
-      - 例子：独立负责360数据彩票走势图开发
+      - 例子：独立负责**数据走势图开发
     > 负责业务的业绩
-      - 例子：历时三周完成所有彩种开发，用户量上涨15%
+      - 例子：历时*周完成所有**开发，用户量上涨15%
     > 使用了什么技术方案
       - 例子：常规canvas方案，使用vml+svg方案
     > 突破了什么技术难点
-      - 例子：解决了走势图高级绘图板的开发
+      - 例子：解决了走势**的开发
     > 遇到了最大问题
-      - 例子：橡皮擦的原理，动态连线计算等
+      - 例子：**的原理，计算等
     > 最大收获是什么
       - 例子：对业务理解更加深入，对技术图表更有把控
-
 - 团队协作能力 （主动描述）   
 - 事务推动能力 （主动描述）
     - 推动历史算法更新换代
@@ -198,14 +173,12 @@ css放前 js放后 图片预加载
     - 学习能力 列子：经常看学习视频博客
     - 无上限付出 例子：加班 
     - 思考能力 例子：爱思考 新技术 听一些分享
- 
 - 职业规划
     - 长期目标：业务上面的专家，技术上吗不断吸收
     - 短期目标：清楚岗位业务目标，为公司业务做到极致，工具类
     - 怎么做方法：分享会，工具思想
     - 多赞美  
     - 有主见，做事果断 善于沟通，主动沟通
-    
 `体现`
 - 逻辑顺畅
 - 上进有责任心
@@ -218,6 +191,3 @@ css放前 js放后 图片预加载
 三面：有经验，懂合作，有担当，懂规矩，察眼观色（是否双向感兴趣）
 终面：会沟通，要上进，好性格，有主见，强逻辑，无可挑剔
 复盘：胜不骄，败不馁，总结经验，步步为营，多拿几个offer
-
-复习指南
-![c928b051bcea3c274f4a3aea8ca87d3b.png](evernotecid://9573F1D7-6DBC-4D5C-9DF2-A3381CB96512/appyinxiangcom/23838011/ENResource/p6)
