--- a/问题/热力图.md
+++ b/问题/热力图.md
@@ -30,3 +30,32 @@
 只挑数值 - 经销商4S店服务店
 
 targetBd
+
+
+1: 人才济济
+2: 极少任务
+3: 产品端 技术端 
+4: 聚集一堂，讨论创新方向，业务如何包装应用
+5: 人群细分（沉淀）上到百度那头 人群细分  怎么做红蓝图
+6: 跑标签计划
+7: 技术新的东西一起研究，
+  - 智能派化神秘客路线，热力图原理，红蓝图探索
+8: 我们大部分的人不见得能够说清楚，投入的努力，没有价值最大化；能够相向有需求的企业，除了上海通用想不出其他；
+
+要做：
+  类似；奔驰品牌叫好，提升研究水平认知有帮助
+  红蓝图能够解读没几个人，有和我的区别，能不能把这个东西做好；
+  技术不需要投入很高
+  R语言语言已经投入恐惧，需求有限，投入有多大，需要衡量
+  效率 保密
+
+
+[heatmap](https://heat.qq.com/heatmap_result.php?date=2019-08-14&prov=%E5%8C%97%E4%BA%AC%E5%B8%82&city=%E5%8C%97%E4%BA%AC%E5%B8%82&region_name=%E5%8C%97%E4%BA%AC%E6%AC%A2%E4%B9%90%E8%B0%B7&region_id=5381&range=60)
+[heatmap-3d](https://lbs.amap.com/api/javascript-api/example/selflayer/heatmap/?sug_index=4)
+[heatmap-3d](https://echarts.baidu.com/examples/editor.html?c=heatmap-large)
+[路线图](https://heat.qq.com/qianxi.php)
+[d3](https://observablehq.com/@d3/contours)
+[d3](https://d3js.org/)
+[d3](https://github.com/d3/d3/wiki/Gallery)
+[bdp](https://me.bdp.cn/register.html)
+[选中出现热力图](https://me.bdp.cn/share/index.html?shareId=sdo_08249593ca50cc7497ecbb145d84c80c)
