热力图补充

--- a/问题/热力图/热力图.md
+++ b/问题/热力图/热力图.md
@@ -52,3 +52,12 @@
 [选中区域出现热力图](https://me.bdp.cn/share/index.html?shareId=sdo_08249593ca50cc7497ecbb145d84c80c)
 
 欢迎补充
+
+
+### 遗留带规划处理
+流向地图 - 热力图带圈升级版html版本
+- [鼠标工具-绘制覆盖物](https://lbs.amap.com/api/javascript-api/example/mouse-operate-map/mouse-draw-overlayers)
+- [点是否在多边形内](https://lbs.amap.com/api/javascript-api/example/relationship-judgment/point-surface-relation)
+- [路线拖拽修改](https://lbs.amap.com/api/javascript-api/example/driving-route/route-can-be-dragged)
+
+
