--- a/其他/吐个槽/接盘侠.md
+++ b/其他/吐个槽/接盘侠.md
@@ -4,13 +4,18 @@
 先如今前端人员刚忙完一个项目，还处于测试期，就需要安排解盘这个项目
 
 - 消极因素：
-  - 代码中过多low的操作，和不规范的前端代码，无工具库
+  - 代码中过多low的操作，和不规范不专业的前端代码，无工具库，未分离
   - 不是自己从零开发代码，既然过了自己的手，也不能太差的去输出，如果不差就要耗费很多精力去修补填坑
   - 使用不了 ES6，用 jQ 且无组件库，开发效率低
   - 没有 Vue / React 框架，最原始开发模式影响效率
   - 没 ESlin 代码不规范
+  - 触碰了职业道德底线
 
 - 摒弃
   - 熟悉下layui
   - 熟悉python框架
   - 但是仍然保持镇定，发掘可学习到点，不传递消极情绪
+
+- 存在的问题
+  - 职责不清晰
+  - 代码不规范
