--- a/Blog/2019.md
+++ b/Blog/2019.md
@@ -1,2 +1,3 @@
 [政采云前端小报](https://weekly.zoo.team/)
 [前端模块的历史沿革](https://www.cyj.me/programming/2018/05/22/about-module-i/?nsukey=GG10UfiWibP0TnWH7HNQiSu6QDdeMj4GANllFd9XgtCoRO1hDCtjmIyPV%2FXQhVdfYTm5dPbIdUvkzEU57ldxRDApiejkD7SAHkWlyG6znB7qN1jkYHUBGZyjQyhyJKfW65Eu2vDnGF18zbnG97mM%2FE7urclxQ6kOk0tRzbeBklFL4HTbty8kJdbrMMU1%2BCjRXOrUO6umwrlO%2FQ9hjlJ%2ByQ%3D%3D)
+[如何有效准备面试](https://www.yuque.com/cs5m0m/enuxu8/ica1xl)
