--- a/题目/2019整合.md
+++ b/题目/2019整合.md
@@ -201,6 +201,9 @@ HR需主动介绍 - 福利待遇
 
 大公司重点去考察这个人是“自带体系型”的人，还是“体系内生存型”的人
 
+“我是_____的_____。在大学里，我在_____学习_____。然后我在_____工作_____。然后我在_____工作_____。在我目前的职位上，我已经完成了_____。在我的空闲时间，我喜欢_____。“
 
+情境(situation)、任务(task)、行动(action)、结果(result)
 
 [frontend-interview](https://lucifer.ren/fe-interview/#/?id=css-%f0%9f%a6%8b)
+
