--- a/HTTP/题.md
+++ b/HTTP/题.md
@@ -69,8 +69,8 @@ POST
     Accept-Language
     User-Agent
     ETag
-  响应内容
     Host
+  响应内容
     Server
   实体
     Content-type
@@ -82,6 +82,7 @@ POST
   其他
     X-Frame-Option
 ```
+
 ## 一次完整的 HTTP 请求事务包含以下四个环节
 ```
 - URL 通过 缓存 或者 DNS服务器找到对应IP
@@ -89,6 +90,7 @@ POST
 - 通过TCP/IP协议进行传输
 - 通过ARP找到IP对应的MAC地址
 ```
+
 ## 一次完整的 HTTP 请求所经历的7个步骤
 ```
 - 应用层
@@ -96,29 +98,40 @@ POST
 - 网络层
 - 数据链路层
 - 物理层
+建立TCP连接->发送请求行->发送请求头->（到达服务器）发送状态行->发送响应头->发送响应数据->断TCP连接
+
 ```
 ## 输入一个 URL，到页面展示中间经历了哪些东西
 ## HTTP 优化
 ```
-利用负载均衡优化和加速HTTP应用
-利用HTTP Cache来优化网站
+缓存：利用HTTP Cache来优化网站
+压缩：内容压缩
+TCP复用：
+  负载均衡：多个客户端一个HTTP复用到一个TCP连接上
+  HTTP复用：一个客户端多个HTTP复用到一个TCP连接进行处理
+SSL加速：使用SSL协议对HTTP协议进行加密，在通道内加密并加速
 ```
+
 ## HTTP 的缺点
 ```
 不保存、无状态
 管线化
 ```
+
 ## HTTP1.1 版本特性
 ```
 持久链接
 管线化
-断点续传原理
+断点续传
 ```
+
 ## http 和 https 的区别
 ```
 HTTP 明文可被代理修改首部信息，不安全
-HTTPS 加密更加安全
+安全：HTTP无法加密不安全 HTTPS加密安全
+端口： HTTP80 HTTPS 443
 ```
+
 ## HTTP 缓存
 ```
 Cache-Control
