--- a/HTTP/题.md
+++ b/HTTP/题.md
@@ -102,6 +102,30 @@ POST
 
 ```
 ## 输入一个 URL，到页面展示中间经历了哪些东西
+```
+- 浏览器：
+  - 浏览器是多进程的，每个页面是一个进程，输入一个 URL 按下会车开启一个新的进程，包含有多个线程其中 网络线程/GUI渲染线程/JS引擎解析线程
+  
+- 网络线程
+  - 应用层：域名找到对应 IP
+    - URL 找到先找浏览器缓存，没有找本机缓存，没有找 HOST，在没有找 DNS 域名服务找到，中间可能经过路由缓存
+    - HTTP 生成请求报文 请求行 空行 请求主体 
+  - 传输层：建立 TCP 通信连接，进行三次握手
+  - 网络层：路由转发找到对应服务器 物理MAC 地址
+  - 物理链路层：通过物理设备
+  - 服务器收到数据
+    - 负载均衡 HTTP复用
+  - HTTP 响应报文
+  - 缓存设置
+
+- GUI渲染线程
+  - HTML 解析成DOM Tree， CSS解析成树，合成RenderTree，然后渲染
+  
+- JS 引擎解析线程
+  - EventLoop 作用域链 变量提升 回收机制 垃圾回收 作用域链 原型链
+
+```
+
 ## HTTP 优化
 ```
 缓存：利用HTTP Cache来优化网站
