--- a/HTTP/题.md
+++ b/HTTP/题.md
@@ -119,8 +119,8 @@ POST
   - 缓存设置
 
 - GUI渲染线程
-  - HTML 解析成DOM Tree， CSS解析成树，合成RenderTree，然后渲染
-  
+  - HTML 解析成DOM Tree， CSS解析成CSSOM，合成RenderTree，然后渲染
+
 - JS 引擎解析线程
   - EventLoop 作用域链 变量提升 回收机制 垃圾回收 作用域链 原型链
 
