--- a/反问/2019.md
+++ b/反问/2019.md
@@ -22,7 +22,7 @@
 - 晋升流程是怎样的？要求/预期是怎样沟通的？
 - 技术和管理两条职业路径是分开的吗？
 - 有公司级别的学习资源吗？比如电子书订阅或者在线课程？
-= 公司的成熟度如何？（早期寻找方向 / 有内容的工作 / 维护中 / ...)
+- 公司的成熟度如何？（早期寻找方向 / 有内容的工作 / 维护中 / ...)
 - 有竞业限制或者保密协议需要签吗？
 
 # 商业
