--- a/JS/基础/安全/安全.md
+++ b/JS/基础/安全/安全.md
@@ -10,7 +10,8 @@
 8：接入层上传问题
 9：社会工程学和信息泄露 OAuth  已经授权的用户 授权会过期  数据接口可风控审计 不允许批量查询
 10：其他安全问题 
-11：总结
+11： window.opener 安全问题
+12：总结
 
 
 #### 1：XSS
@@ -215,3 +216,17 @@ token
 nonce
 签名
 
+11： window.opener 安全问题
+
+window.opener 表示打开当前窗体页面的的父窗体的是谁。例如，在 A 页面中，通过一个带有 target="_blank" 的 a 标签打开了一个新的页面 B，那么在 B 页面里，window.opener 的值为 A 页面的 window 对象。
+
+
+一般来说，打开同源(域名相同)的页面，不会有什么问题。但对于跨域的外部链接来说，存在一个被钓鱼的风险。比如你正在浏览购物网站，从当前网页打开了某个外部链接，在打开的外部页面，可以通过 window.opener.location 改写来源站点的地址。利用这一点，将来源站点改写到钓鱼站点页面上，例如跳转到伪造的高仿购物页面，当再回到购物页面的时候，是很难发现购物网站的地址已经被修改了的，这个时候你的账号就存在被钓鱼的可能了
+
+1. 设置 rel 属性
+```js
+<a href="https://xxxx" rel="noopener noreferrer"> 外链 <a>
+```
+rel=noopener 规定禁止新页面传递源页面的地址，通过设置了此属性的链接打开的页面，其 window.opener 的值为 null。
+2. 将外链替换为内部的跳转连接服务，跳转时先跳到内部地址，再由服务器 redirect 到外链。
+3. 可以由 widow.open 打开外链。
