--- a/反问/2019.md
+++ b/反问/2019.md
@@ -1,25 +1,27 @@
 # 技术
 - 公司常用的技术栈是什么?
-- 你们怎么测试代码？
+- **你们怎么测试代码？**
 - 你们怎么追踪 bug?
-- 你们如何部署代码？
+- **你们如何部署代码？**
 - 基建有哪些？
-- 从计划到完成一项任务的工作流是什么样的？
+- **从计划到完成一项任务的工作流是什么样的？**
 - 有标准的开发环境吗？是强制的吗？
 - 描述代码审查的流程
 - 公司业务类型 
 - 公司电脑配置 
 - 人员发展安排
+- **这个职位的理想人选是什么样的？**
 
 # 团队
 - 团队内/团队间的交流通常是怎样的？
 - 如果遇到不同的意见怎样处理？
-- 每周都会开什么类型的会议？
-- 团队中有多少成员？团队由多少初级和高级技术人员组成，团队中是否有其他级别的成？
+- **每周都会开什么类型的会议？**
+- 团队中有多少成员？**团队由多少初级和高级技术人员组成**，团队中是否有其他级别的成？
 - 在公司中作出规划的是谁？
+- **技术分享交流活动，多久一次**
 
 # 公司
-- 晋升流程是怎样的？要求/预期是怎样沟通的？
+- **晋升流程是怎样的？要求/预期是怎样沟通的？**
 - 技术和管理两条职业路径是分开的吗？
 - 有公司级别的学习资源吗？比如电子书订阅或者在线课程？
 - 公司的成熟度如何？（早期寻找方向 / 有内容的工作 / 维护中 / ...)
