--- a/JS/基础/闭包.md
+++ b/JS/基础/闭包.md
@@ -45,9 +45,53 @@ add10 = null;
 ### 闭包的应用
 >应用闭包的主要场合是：设计私有的方法和变量。
 
+- 闭包延续局部变量寿命
+问题：report 函数并不是每一次 都成功发起了 HTTP 请求。丢失数据的原因是 img 是 report 函数中的局部变量，当 report 函数的 调用结束后，img 局部变量随即被销毁，而此时或许还没来得及发出 HTTP 请求，所以此次请求 就会丢失掉。
+```js
+var report = function( src ){
+  var img = new Image();
+  img.src = src;
+};
+report( 'http://xxx.com/getUserInfo' );
+```
+解决
+```js
+var report = (function(){
+  var imgs = [];
+  return function( src ){
+    var img = new Image();
+    imgs.push( img );
+    img.src = src;
+  }
+})();
+```
+
+- 闭包作用：封装变量
+```js
+var mult = (function(){
+  var cache = {};
+  var calculate = function(){ // 封闭 calculate 函数
+    var a = 1;
+    for( var i = 0, l = arguments.length; i < l ; i++ ) {
+      a = a * arguments[i]
+    }
+    return a;
+  }
+  return function() {
+    var args = Array.prototype.join.call(arguments, ',')
+    if (args in cache) {
+      return cache[args]
+    }
+    return cache[args] = calculate.apply(null, arguments);
+  }
+})()
+```
 
 ### 闭包的缺陷
 >闭包的缺点就是常驻内存会增大内存使用量，并且使用不当很容易造成内存泄露。
 
 >如果不是因为某些特殊任务而需要闭包，在没有必要的情况下，在其它函数中创建函数是不明智的，因为闭包对脚本性能具有负面影响，包括处理速度和内存消耗。
 
+>局部变量本来应该在函数退出的时候被解除引用，但如果局部变量被封闭在闭包形成的环境 中，那么这个局部变量就能一直生存下去。从这个意义上看，闭包的确会使一些数据无法被及时销毁。**使用闭包的一部分原因是我们选择主动把一些变量封闭在闭包中，因为可能在以后还需要使用这些变量**，把这些变量放在闭包中和放在全局作用域，对内存方面的影响是一致的，这里并不能说成是内存泄露。如果在将来需要回收这些变量，我们可以手动把这些变量设为 null。
+
+>跟闭包和内存泄露有关系的地方是，使用闭包的同时比较容易形成循环引用，如果闭包的作 用域链中保存着一些 DOM 节点，这时候就有可能造成内存泄露。但这本身并非闭包的问题，也并非 JavaScript 的问题。在 IE 浏览器中，由于 BOM 和 DOM 中的对象是使用 C++以 COM 对象 的方式实现的，而 COM 对象的垃圾收集机制采用的是引用计数策略。在基于引用计数策略的垃圾回收机制中，如果两个对象之间形成了循环引用，那么这两个对象都无法被回收，但**循环引用造成的内存泄露**在本质上也不是闭包造成的。
