--- a/JS/基础/安全/安全.md
+++ b/JS/基础/安全/安全.md
@@ -163,7 +163,7 @@ iframe 可以设置 sandbox="allow-forms" 禁止js的时候就不管用了
 3：其他辅助手段
 
 
-#### 五：传输协议 hhtp https 
+#### 五：传输协议 http https 
 1：http传输 窃听 篡改
 
 traceroute www.tooobug.net 【tracert】
