--- a/问题/管理.md
+++ b/问题/管理.md
@@ -1,8 +1,7 @@
-- 新兴技术无法施展 [带动宣读]
-- 民主探讨方案，没有任何意见，却又无法实施 [工具]
+- 新兴技术无法施展 [带动宣读、组长需要起带头作用]
 - 安排的方案，得不到实施  [工具]
-- 代码审核没有积极性 [工具限制]
-- 代码规范意识不足  [工具]
-- 写代码能用即可  [审查清单]
-- 情绪问题 [TL项目查看]
-- 把控沟通问题 [TL项目查看]
+- 代码审核没有积极性 [一方面工具限制、组长带头进行 CR ]
+- 代码规范意识不足  [工具限制 + CR]
+- 写代码能用即可  [代码审查]
+- 情绪问题 [努力提高团队能力，每个人都渴望成长，用心带领]
+- 把控沟通问题 [TL 项目查看]
