--- a/题目/2021-07.md
+++ b/题目/2021-07.md
@@ -1,38 +1,41 @@
 # js
 - 事件循环
 - 事件机制捕获、冒泡
-- 设计模式了解应用，发布订阅模式
+- Object.prototype.toString 返回什么 '[object Object]'
 - 闭包
-- ajax fetch axios 区别，ajax实现原理
-- 解决异步中同步问题
-- 不用promise, 那些可实现 promise generator
-- promise race all allsetted 
 - symbol 是否可以遍历
-- Object.prototype.toString 返回什么
-- 封装 localstorage
 - 手写 instanceof
 - 实现 reduce foreach
-- Promise原理、方法
 - ES6上数组上扩展了哪些方法
-- 深拷贝和浅拷贝
 - 什么是面向对象
-- 垃圾回收
 - js中的堆和栈有什么区别
-- 写一个正则表达式，校验aabb...
-- promise.all
 - `for...in` 和 `for...of` 的区别
-- JS 中有哪些方法可以实现继承
 -  ES6 中 Reflect 对象，它什么优点
 - JS 中通过 `bind` 绑定的方法，再使用 `apply` 或 `call` 会改变它的 `this` 吗
+- map，forEach的区别
+- 引用类型怎么存储
+- slice，splice，区别，是否改变数组
+- JS 中有哪些方法可以实现继承
+- 深拷贝和浅拷贝
+- Js垃圾回收和v8的垃圾回收机制有什么区别
+- 设计模式了解应用，发布订阅模式
+- 解决异步中同步问题
+- ajax fetch axios 区别，ajax实现原理
+- 不用promise, 那些可实现 promise generator
+- promise race all allsetted 
+- 封装 localstorage
 - 为什么原生的 form 表单提交没有跨域问题（form 请求和 ajax 请求有什么不同）
+- Promise原理、方法
+- 垃圾回收
+- 写一个正则表达式，校验aabb...
+- promise.all
 - 用fetch封装最大并发请求函数.
 - muatable data 思想与 immutable思想的看法
 - axios原理是什么
-- map，forEach的区别
-- 引用类型怎么存储
-- Js垃圾回收和v8的垃圾回收机制有什么区别
-- slice，splice，区别，是否改变数组
 - 防抖和节流应用场景
+- 安全取值之类的
+- 单例模式，保证只有给弹窗，当一个弹窗打开的时候，关闭其他弹窗
+- 发布订阅模式
 
 # css
 - BFC
@@ -189,7 +192,7 @@
 # 手写
 - 手写字符串连接符-变驼峰，考察现场编码能力及api的熟练程度
 - 括号关闭
-- `['1', '2', '3'].map(parseInt)` 返回值是
+- ✅ `['1', '2', '3'].map(parseInt)` 返回值是
 - (5.2 - 2.82 * 43.11) / (25.01 * 54.11 + 55.2223) * 2.34566怎么算出精确的数
 - 把 `input` 转换成 `output` 格式对象
 ```javascript
@@ -214,3 +217,41 @@ var output = {
 /['_', 'a', '_', ‘c', 'b', '_', '_’],不改变数组的情况下得出以下信息
 //['a', ‘c', ‘b', '_', '_', '_', '_’]
 - https://bitable.feishu.cn/app8Ok6k9qafpMkgyRbfgxeEnet?from=logout&table=tblzZHf2Ix3YtxPM&view=vew9iquA45
+```js
+function add (a, b){
+  return new Promise((resolve,reject)=> {
+      setTimeout(function(){
+          resolve(a+b);
+      }, 0)
+  })
+}
+const getSum = async (...args) => {
+  let temp = 0;
+  for (var i = 0 ; i < args.length ; i+=2) {
+    const result = await add(args[i], args[i+1]);
+    temp += result;
+  }
+  return temp;
+}
+console.log(await getSum(4,5,7,9), 'target');
+```
+```js
+// 手写个方法，过滤掉 location.search 中的 `c=1`，`https://a.com/?b=0&c=1#/def?g=2&c=1&h=3#ijk_c=1`
+```
+```js
+// arr 数组
+// n 项
+// 和等于 sum
+function fn(arr, n, sum)
+```
+```js
+// [1,2,3,6,7,3,'2','3','3'] 出现次数最多的项 出现了几次
+```
+# 项目
+- electron vue3.0 vite ts
+- react 开发项目
+- 低代码
+- 微前端架构
+- 组件库、通用库
+- chrome 插件
+- vscode 插件
