--- a/面试题/['1', '2', '3'].map(parseInt) what & why.md
+++ b/面试题/['1', '2', '3'].map(parseInt) what & why.md
@@ -48,3 +48,16 @@ console.log(array)
 
 # 分享
 [['1', '2', '3'].map(parseInt) what & why](https://github.com/sisterAn/blog/issues/19)
+
+# 十进制互相转化
+## 十进制转化二进制（8421）
+- 10 = 2^1 + 2^0 =  2
+- 11 = 2^1 * 1 + 2^0 * 1
+
+# 十进制转化为八进制
+parseInt("17", 8);
+- 17 = 8^1 * 1 + 8^0 * 7 =  8+7 = 15
+
+# 十进制转化为16进制
+parseInt("FXX123", 16);
+- 123 = 16^2 + 16 * 2 +  3 = 256 + 32 + 3 = 291
