--- a/题目/2021-07.md
+++ b/题目/2021-07.md
@@ -1,154 +1,165 @@
 # js
-- 事件循环
-- 事件机制捕获、冒泡
-- Object.prototype.toString 返回什么 '[object Object]'
-- 闭包
-- symbol 是否可以遍历
+
+- ✅ 1.`['1', '2', '3'].map(parseInt)` 返回值是
+- ✅ 2.`for...in` 和 `for...of` 的区别
+- ✅ 3.map，forEach 的区别
+- ✅ 4.symbol 是否可以遍历
+- ✅ 5.引用类型怎么存储，js 中的堆和栈有什么区别
+- ✅ 6.slice，splice，区别，是否改变数组
+- ✅ 7.Object.prototype.toString 返回什么
+
+- 闭包，场景
 - 手写 instanceof
-- 实现 reduce foreach
-- ES6上数组上扩展了哪些方法
 - 什么是面向对象
-- js中的堆和栈有什么区别
-- `for...in` 和 `for...of` 的区别
--  ES6 中 Reflect 对象，它什么优点
-- JS 中通过 `bind` 绑定的方法，再使用 `apply` 或 `call` 会改变它的 `this` 吗
-- map，forEach的区别
-- 引用类型怎么存储
-- slice，splice，区别，是否改变数组
+- 实现 reduce foreach
+- ES6 上数组上扩展了哪些方法
+- JS 中通过 `bind` 绑定的方法，再使用 `apply` 或 `call` 会改变它的 `this` 吗，几个远离
+- 事件机制捕获、冒泡
+- 事件循环，题练习 node
+
+- ES6 中 Reflect 对象，它什么优点
 - JS 中有哪些方法可以实现继承
 - 深拷贝和浅拷贝
-- Js垃圾回收和v8的垃圾回收机制有什么区别
+- Js 垃圾回收和 v8 的垃圾回收机制有什么区别
 - 设计模式了解应用，发布订阅模式
+- 单例模式，保证只有给弹窗，当一个弹窗打开的时候，关闭其他弹窗
+
 - 解决异步中同步问题
-- ajax fetch axios 区别，ajax实现原理
-- 不用promise, 那些可实现 promise generator
-- promise race all allsetted 
-- 封装 localstorage
+- ajax fetch axios 区别，ajax 实现原理, axios 原理是什么
+- 不用 promise, 那些可实现 promise generator
+- promise race all allsetted
+- Promise 原理、方法
 - 为什么原生的 form 表单提交没有跨域问题（form 请求和 ajax 请求有什么不同）
-- Promise原理、方法
-- 垃圾回收
-- 写一个正则表达式，校验aabb...
-- promise.all
-- 用fetch封装最大并发请求函数.
-- muatable data 思想与 immutable思想的看法
-- axios原理是什么
+
+- 封装 localstorage
+- 写一个正则表达式，校验 aabb...
+- 用 fetch 封装最大并发请求函数.
+- muatable data 思想与 immutable 思想的看法
 - 防抖和节流应用场景
 - 安全取值之类的
-- 单例模式，保证只有给弹窗，当一个弹窗打开的时候，关闭其他弹窗
-- 发布订阅模式
 
 # css
+
 - BFC
-- css样式，宽高占屏幕一半，水平垂直居中
-- 几个简单的css问题：flex布局、动画
+- css 样式，宽高占屏幕一半，水平垂直居中
+- 几个简单的 css 问题：flex 布局、动画
 - 吸底组件的 fix 的兼容性怎么处理
-- 不设置windth height 成正方形
+- 不设置 windth height 成正方形
 - position 那些值，作用什么
 
-
 # html
+
 - 垂直水平剧中
 - 左边定宽度，右边自使用，高度填满整个屏幕
 - dom 树理解
 
 # node
-- 负载均衡、node开启cpu个数的进程，并实现简单的负载均衡
-- a模块引用了b 模块   b模块引用a模块，node是怎么避免模块的循环引用的
-- 项目开发中用过node吗，做了哪些，如何实现koa中间件，typeorm解决的什么问题，数据库连接的一个工具，能够支持数据库的一些模型，本身支持ts编译自动生成ts类型定义有对应的cri，比较方便也支持es6的一些语法
-- 使用node读取一个大文件，怎么控制读写速度的呢。stream，data
+
+- 负载均衡、node 开启 cpu 个数的进程，并实现简单的负载均衡
+- a 模块引用了 b 模块 b 模块引用 a 模块，node 是怎么避免模块的循环引用的
+- 项目开发中用过 node 吗，做了哪些，如何实现 koa 中间件，typeorm 解决的什么问题，数据库连接的一个工具，能够支持数据库的一些模型，本身支持 ts 编译自动生成 ts 类型定义有对应的 cri，比较方便也支持 es6 的一些语法
+- 使用 node 读取一个大文件，怎么控制读写速度的呢。stream，data
 
 # vue
+
+- vue 响应式原理
+- vue 数组是否相应
+- 虚拟 dom
+- 全局注册组件
+- vue use 干了什么
+- 混入 minxi 的副作用
 - setup this
 - reactive ref 区别
-- vue 响应式原理 
-- 虚拟 dom
-- vue 数组是否相应
-- vue use 干了什么
-- 全局注册组件
-- 混入minxi的副作用
 - 微前端
-- vue+ts使用中有哪些坑
-- vue项目多人协作如何实现统一管理
-- 手写封装一个组件，实现checkebox单选多选全选、以及v-modles数据双向绑定
-- vue响应式的原理，为什么vue3中改成了es6的proxy
-- vue组件如何通讯
+- vue+ts 使用中有哪些坑
+- vue 项目多人协作如何实现统一管理
+- 手写封装一个组件，实现 checkebox 单选多选全选、以及 v-modles 数据双向绑定
+- vue 响应式的原理，为什么 vue3 中改成了 es6 的 proxy
+- vue 组件如何通讯
 - diff 原理
 - vue-router 原理、模式区别，微信分享遇到问题
-- compiler原理
+- compiler 原理
 - 按钮级别权限
 
 # TS
-- ts中的类型断言如何做的
-- 如何用es5 或者es6实现ts中的接口interface
-- ts泛型【我主动提到的】
-- ts有哪些类型
-- ts中的泛型
-- ts中如何定义树结构的接口
-- ts中any如何处理
-- ts中的泛型
+
+- ts 中的类型断言如何做的
+- 如何用 es5 或者 es6 实现 ts 中的接口 interface
+- ts 泛型【我主动提到的】
+- ts 有哪些类型
+- ts 中的泛型
+- ts 中如何定义树结构的接口
+- ts 中 any 如何处理
+- ts 中的泛型
 -
 
-
 # webpack
+
 - 单页面多页面问题，如何给客户私有化部署
-- 前端性能优化从webpack方面能做哪些优化
-- webpack分包加载用的是哪个，分包的原理？
-- webpack中loader和plugin的区别
-- webpack如何实现的模块依赖关系
+- 前端性能优化从 webpack 方面能做哪些优化
+- webpack 分包加载用的是哪个，分包的原理？
+- webpack 中 loader 和 plugin 的区别
+- webpack 如何实现的模块依赖关系
 - webpack 的 tree shaking 是怎么实现的
-- 让你实现一个webpack，实现思路是什么？
+- 让你实现一个 webpack，实现思路是什么？
 - webpack 如何指定模块化规范（amd、cmd 这些）
 - webpack 的三种 hash、chunkHash、contentHash 有什么区别
-- module.export / exports default exports / exports  require/import 区别
-- 如何实现一个plugin插件
-- 新能指标、RAIL 
+- module.export / exports default exports / exports require/import 区别
+- 如何实现一个 plugin 插件
+- 新能指标、RAIL
 
 # 小程序
+
 - 小程序的原理
 - 小程序传值方式
 - 小程序更新数据及如何优化这个更新数据的性能开销
-- 小程序内嵌H5传值、小程序如何传递cookie到H5
+- 小程序内嵌 H5 传值、小程序如何传递 cookie 到 H5
 - 小程序多端如何实现
-- 小程序和webview内嵌有什么区别
-- 小程序中的js和浏览器中的js的区别
-- 微信sdk源码是否有看过
+- 小程序和 webview 内嵌有什么区别
+- 小程序中的 js 和浏览器中的 js 的区别
+- 微信 sdk 源码是否有看过
 - 小程序分包怎么用，分包的原理是什么
 
 # react
+
 - redux 源码
 - 有用过 hooks 吗？介绍几个常用的 hooks
 - setState 原理，什么时候同步异步
 - 为什么有合成事件
 
 # 框架
+
 - react vs vue
 - mvvm 理解
 
 # 浏览器
+
 - 浏览器渲染过程
 - 跨域的解决方案
 - 跨页面传输数据有哪些方式
-- 个二级域名不同cookie怎么传输
+- 个二级域名不同 cookie 怎么传输
 - abc 三个域名 localstorage 共享
-- cdn主要放了什么，index.html,css,js文件放到哪里，有做缓存，浏览器缓存有更新和变化怎么办，浏览器缓存缓存多长时间
-- 有做ssr，预渲染和ssr区别
-
+- cdn 主要放了什么，index.html,css,js 文件放到哪里，有做缓存，浏览器缓存有更新和变化怎么办，浏览器缓存缓存多长时间
+- 有做 ssr，预渲染和 ssr 区别
 
 # HTTP
-- http缓存原理，前端缓存了解哪些，网络缓存和前端缓存如何交互，说几个缓存相关的 HTTP 状态码
-- post和put请求有什么区别
-- http和https的区别
-- 数据上有安全性考虑吗，比如存储，比如说加密，秘钥生成，保存，加密解密，对md5使用吗，理解md5吗，唯一不可逆，断点上传，密码的保存，md5，加密，hash一下
+
+- http 缓存原理，前端缓存了解哪些，网络缓存和前端缓存如何交互，说几个缓存相关的 HTTP 状态码
+- post 和 put 请求有什么区别
+- http 和 https 的区别
+- 数据上有安全性考虑吗，比如存储，比如说加密，秘钥生成，保存，加密解密，对 md5 使用吗，理解 md5 吗，唯一不可逆，断点上传，密码的保存，md5，加密，hash 一下
 - 三次握手，四次挥手，为什么挥手不能用三次
-- http1和http2的区别， http2 做了那些改进，有哪些不足，http3 做了那些改进
+- http1 和 http2 的区别， http2 做了那些改进，有哪些不足，http3 做了那些改进
 - https 加密过程
 - TCP 滑动窗口
 - TCP 重试机制
 
 # 安全
-- csrf 
+
+- csrf
 
 # 优化
+
 - 性能优化，你会从哪几个方面考虑性能优化
 - 打包优化
 - 长列表优化
@@ -160,41 +171,44 @@
 - CSS 相关性能优化
 
 # 算法
+
 - 树结构转化数组、数组转化树结构
 - 一个小算法，实现多维数组铺平处理
 - 算法题链表结构中如何判断是否已成环
 - 算法题-树结构遍历，如何实现一层一层的遍历？
 - 一个字符串里找一个 不重复子串
-- 给你两个有序整数数组 nums1 和 nums2，请你合并num1和nums2，返回一个有序数组。
+- 给你两个有序整数数组 nums1 和 nums2，请你合并 num1 和 nums2，返回一个有序数组。
 - 求二叉树，根路径到所有叶子结点的累加值之
-- 求单链表倒数第k 个结点，O(n)的时间复杂度
-- 实现36进制的加法，0-9 加 a-z 不得直接使用parseInt转换十进制进行计算，如 '1b' + '0a' = 57
+- 求单链表倒数第 k 个结点，O(n)的时间复杂度
+- 实现 36 进制的加法，0-9 加 a-z 不得直接使用 parseInt 转换十进制进行计算，如 '1b' + '0a' = 57
 - 获取字符串中有重复字符的字符和长度，没有的话返回
 - 斐波那契数列
 - https://codetop.cc/#/home
 
-
 # H5
-- H5屏幕适配方案对比
+
+- H5 屏幕适配方案对比
 - 移动端适配的原理及多种方案对比
-- 1px在不同的手机屏幕渲染出来为什么不一样
-- webview和原生交互是如何实现的，搭桥的原理
+- 1px 在不同的手机屏幕渲染出来为什么不一样
+- webview 和原生交互是如何实现的，搭桥的原理
 - 然后问了一下移动端兼容性问题，比如键盘遮挡 input
 
-
 # 其他
+
 - 最近有学习什么新技术
-- flutter中widget用过哪些？
+- flutter 中 widget 用过哪些？
 - 图片处理时如果图片时倒过来的怎么处理
 - cicd 发布流程，前端做了什么
 - 如何解决跨域，cors，设置*后一直可以跨域吗，什么情况配*下不可以，如果配置是个域名，只返回个域名行吗
 
 # 手写
-- 手写字符串连接符-变驼峰，考察现场编码能力及api的熟练程度
+
+- 手写字符串连接符-变驼峰，考察现场编码能力及 api 的熟练程度
 - 括号关闭
-- ✅ `['1', '2', '3'].map(parseInt)` 返回值是
-- (5.2 - 2.82 * 43.11) / (25.01 * 54.11 + 55.2223) * 2.34566怎么算出精确的数
+
+- (5.2 - 2.82 _ 43.11) / (25.01 _ 54.11 + 55.2223) \* 2.34566 怎么算出精确的数
 - 把 `input` 转换成 `output` 格式对象
+
 ```javascript
 var input = {
   'a.b.c.dd': 'abcdd',
@@ -214,40 +228,48 @@ var output = {
     }
 }
 ```
+
 /['_', 'a', '_', ‘c', 'b', '_', '_’],不改变数组的情况下得出以下信息
 //['a', ‘c', ‘b', '_', '_', '_', '_’]
+
 - https://bitable.feishu.cn/app8Ok6k9qafpMkgyRbfgxeEnet?from=logout&table=tblzZHf2Ix3YtxPM&view=vew9iquA45
+
 ```js
-function add (a, b){
-  return new Promise((resolve,reject)=> {
-      setTimeout(function(){
-          resolve(a+b);
-      }, 0)
-  })
+function add(a, b) {
+  return new Promise((resolve, reject) => {
+    setTimeout(function () {
+      resolve(a + b);
+    }, 0);
+  });
 }
 const getSum = async (...args) => {
   let temp = 0;
-  for (var i = 0 ; i < args.length ; i+=2) {
-    const result = await add(args[i], args[i+1]);
+  for (var i = 0; i < args.length; i += 2) {
+    const result = await add(args[i], args[i + 1]);
     temp += result;
   }
   return temp;
-}
-console.log(await getSum(4,5,7,9), 'target');
+};
+console.log(await getSum(4, 5, 7, 9), "target");
 ```
+
 ```js
 // 手写个方法，过滤掉 location.search 中的 `c=1`，`https://a.com/?b=0&c=1#/def?g=2&c=1&h=3#ijk_c=1`
 ```
+
 ```js
 // arr 数组
 // n 项
 // 和等于 sum
 function fn(arr, n, sum)
 ```
+
 ```js
 // [1,2,3,6,7,3,'2','3','3'] 出现次数最多的项 出现了几次
 ```
+
 # 项目
+
 - electron vue3.0 vite ts
 - react 开发项目
 - 低代码
