feat: interveiw-js

--- a/面试题/js/8.闭包.md
+++ b/面试题/js/8.闭包.md
@@ -1,1 +1,58 @@
 # 闭包
+
+- 有权访问另一个函数作用域中的遍历的函数
+- 一个函数访问了另一个函数的变量
+- 函数 A 内部有函数 B， B 可以访问到函数 A 变量，那么函数 B 就是闭包
+
+## 产生闭包
+
+```js
+function fn() {
+  var mty = 10;
+  return function () {
+    return mty;
+  };
+}
+```
+
+## 应用场景
+
+> 访问私有方法和变量
+
+- 上报：
+
+```js
+// report 函数调用结束后， img 随即被销毁，或许还没来得及发送 http 请求
+var report = function (src) {
+  var img = new Image();
+  img.src = src;
+};
+report("http://xxx.com/getUserInfo");
+
+// 改造后
+
+var sendLog = (funtion(){
+  var img = [];
+  return (src) => {
+    var img = new Image();
+    imgs.push(img);
+    img.src = src;
+  };
+})();
+```
+
+- 封装变量：for 循环里面有异步操作，异步操作需要用到 index
+
+```js
+for (var i = 0; i < 10; i++) {
+  (function (i) {
+    setTimeout(function () {
+      console.log(i);
+    }, 0);
+  })(i);
+}
+```
+
+## 缺点
+
+- 使用不当容易造成内存泄露
