--- a/题目/2021-07.md
+++ b/题目/2021-07.md
@@ -8,14 +8,14 @@
 - ✅ 6.slice，splice，区别，是否改变数组
 - ✅ 7.Object.prototype.toString 返回什么
 
-- 闭包，场景
-- 手写 instanceof
-- 什么是面向对象
-- 实现 reduce foreach
-- ES6 上数组上扩展了哪些方法
-- JS 中通过 `bind` 绑定的方法，再使用 `apply` 或 `call` 会改变它的 `this` 吗，几个远离
-- 事件机制捕获、冒泡
-- 事件循环，题练习 node
+- ✅ 8.闭包，场景
+- ✅ 9.手写 instanceof
+- ✅ 10.什么是面向对象
+- ✅ 11.ES6 上数组上扩展了哪些方法
+- ✅ 12.事件机制捕获、冒泡
+- ✅ 13.JS 中通过 `bind` 绑定的方法，再使用 `apply` 或 `call` 会改变它的 `this` 吗，几个原理
+- ✅ 14.事件循环
+- ✅ 15.实现 reduce foreach
 
 - ES6 中 Reflect 对象，它什么优点
 - JS 中有哪些方法可以实现继承
@@ -28,6 +28,7 @@
 - ajax fetch axios 区别，ajax 实现原理, axios 原理是什么
 - 不用 promise, 那些可实现 promise generator
 - promise race all allsetted
+
 - Promise 原理、方法
 - 为什么原生的 form 表单提交没有跨域问题（form 请求和 ajax 请求有什么不同）
 
@@ -35,6 +36,7 @@
 - 写一个正则表达式，校验 aabb...
 - 用 fetch 封装最大并发请求函数.
 - muatable data 思想与 immutable 思想的看法
+
 - 防抖和节流应用场景
 - 安全取值之类的
 
@@ -59,6 +61,7 @@
 - a 模块引用了 b 模块 b 模块引用 a 模块，node 是怎么避免模块的循环引用的
 - 项目开发中用过 node 吗，做了哪些，如何实现 koa 中间件，typeorm 解决的什么问题，数据库连接的一个工具，能够支持数据库的一些模型，本身支持 ts 编译自动生成 ts 类型定义有对应的 cri，比较方便也支持 es6 的一些语法
 - 使用 node 读取一个大文件，怎么控制读写速度的呢。stream，data
+- 事件循环
 
 # vue
 
@@ -68,6 +71,7 @@
 - 全局注册组件
 - vue use 干了什么
 - 混入 minxi 的副作用
+
 - setup this
 - reactive ref 区别
 - 微前端
@@ -76,10 +80,13 @@
 - 手写封装一个组件，实现 checkebox 单选多选全选、以及 v-modles 数据双向绑定
 - vue 响应式的原理，为什么 vue3 中改成了 es6 的 proxy
 - vue 组件如何通讯
-- diff 原理
-- vue-router 原理、模式区别，微信分享遇到问题
-- compiler 原理
 - 按钮级别权限
+
+- diff 原理
+
+- vue-router 原理、模式区别，微信分享遇到问题
+
+- compiler 原理
 
 # TS
 
@@ -91,20 +98,24 @@
 - ts 中如何定义树结构的接口
 - ts 中 any 如何处理
 - ts 中的泛型
--
 
 # webpack
 
 - 单页面多页面问题，如何给客户私有化部署
 - 前端性能优化从 webpack 方面能做哪些优化
+
 - webpack 分包加载用的是哪个，分包的原理？
 - webpack 中 loader 和 plugin 的区别
+
 - webpack 如何实现的模块依赖关系
 - webpack 的 tree shaking 是怎么实现的
+
 - 让你实现一个 webpack，实现思路是什么？
 - webpack 如何指定模块化规范（amd、cmd 这些）
+
 - webpack 的三种 hash、chunkHash、contentHash 有什么区别
 - module.export / exports default exports / exports require/import 区别
+
 - 如何实现一个 plugin 插件
 - 新能指标、RAIL
 
@@ -161,13 +172,20 @@
 # 优化
 
 - 性能优化，你会从哪几个方面考虑性能优化
+
 - 打包优化
+
 - 长列表优化
+
 - 内存泄露怎么解决，怎么定位
+
 - 说一个自己熟悉的项目
 - 小程序性能优化
+
 - 项目优化
+
 - 白屏优化措施
+
 - CSS 相关性能优化
 
 # 算法
