feat: interview-js

--- a/面试题/js/12.事件机制捕获、冒泡.md
+++ b/面试题/js/12.事件机制捕获、冒泡.md
@@ -7,6 +7,7 @@
 - 冒泡
   先执行子方法，在执行父方法，**默认冒泡**
   在子方法中执行，event.stopPrapagation 阻止冒泡
+  事件冒泡是实现事件委托的原理（event delegation）。
 
 ```js
 window.addEventListener(
@@ -16,4 +17,18 @@ window.addEventListener(
   },
   true
 );
+```
+
+## 事件委托
+
+```javascript
+// Get the element, add a click listener...
+document.getElementById("parent-list").addEventListener("click", function(e) {
+	// e.target is the clicked element!
+	// If it was a list item
+	if(e.target && e.target.nodeName == "LI") {
+		// List item found!  Output the ID!
+		console.log("List item ", e.target.id.replace("post-", ""), " was clicked!");
+	}
+});
 ```
