--- a/题目/2021-07.md
+++ b/题目/2021-07.md
@@ -17,12 +17,11 @@
 - ✅ 14.事件循环
 - ✅ 15.实现 reduce foreach
 
-- ES6 中 Reflect 对象，它什么优点
-- JS 中有哪些方法可以实现继承
-- 深拷贝和浅拷贝
-- Js 垃圾回收和 v8 的垃圾回收机制有什么区别
-- 设计模式了解应用，发布订阅模式
-- 单例模式，保证只有给弹窗，当一个弹窗打开的时候，关闭其他弹窗
+- ✅ 16.ES6 中 Reflect 对象，它什么优点
+- ✅ 17.JS 中有哪些方法可以实现继承
+- ✅ 18.深拷贝和浅拷贝
+- ✅ 19.JS 垃圾回收和 v8 的垃圾回收机制有什么区别
+- ✅ 20.设计模式了解应用，发布订阅模式, 单例模式，保证只有给弹窗，当一个弹窗打开的时候，关闭其他弹窗
 
 - 解决异步中同步问题
 - ajax fetch axios 区别，ajax 实现原理, axios 原理是什么
