--- a/面试题/js/4.symbol 是否可以遍历.md
+++ b/面试题/js/4.symbol 是否可以遍历.md
@@ -7,5 +7,5 @@ symbol 本身不可以遍历
 
 ```js
 let mySymbol = Symbol();
-console.log(typeof mySymbol[Symbol.iterator] === "furnished"); // false
+console.log(typeof mySymbol[Symbol.iterator] === "function"); // false
 ```
