--- a/题目/2021-07.md
+++ b/题目/2021-07.md
@@ -23,44 +23,39 @@
 - ✅ 19.JS 垃圾回收和 v8 的垃圾回收机制有什么区别
 - ✅ 20.设计模式了解应用，发布订阅模式, 单例模式，保证只有给弹窗，当一个弹窗打开的时候，关闭其他弹窗
 
-- 解决异步中同步问题
-- ajax fetch axios 区别，ajax 实现原理, axios 原理是什么
-- 不用 promise, 那些可实现 promise generator
-- promise race all allsetted
+- ✅ 21.ajax fetch axios 区别，ajax 实现原理, axios 原理是什么
+- ✅ 22.不用 promise, 那些可实现 promise generator
+- Promise 原理、方法，promise race all allsetted
+- ✅ 25.为什么原生的 form 表单提交没有跨域问题（form 请求和 ajax 请求有什么不同）
+- ✅ 26.防抖和节流应用场景
+- ✅ 27.new 操作符
 
-- Promise 原理、方法
-- 为什么原生的 form 表单提交没有跨域问题（form 请求和 ajax 请求有什么不同）
-
-- 封装 localstorage
-- 写一个正则表达式，校验 aabb...
-- 用 fetch 封装最大并发请求函数.
-- muatable data 思想与 immutable 思想的看法
-
-- 防抖和节流应用场景
-- 安全取值之类的
+https://www.yuque.com/zaotalk/interview/iv3pyp#ehMC
 
 # css
 
-- BFC
-- css 样式，宽高占屏幕一半，水平垂直居中
-- 几个简单的 css 问题：flex 布局、动画
+- ✅ 水平垂直居中
+- ✅ 几个简单的 css 问题：flex 布局、动画
 - 吸底组件的 fix 的兼容性怎么处理
-- 不设置 windth height 成正方形
 - position 那些值，作用什么
+- BFC
 
 # html
 
-- 垂直水平剧中
 - 左边定宽度，右边自使用，高度填满整个屏幕
 - dom 树理解
 
-# node
+# HTTP
 
-- 负载均衡、node 开启 cpu 个数的进程，并实现简单的负载均衡
-- a 模块引用了 b 模块 b 模块引用 a 模块，node 是怎么避免模块的循环引用的
-- 项目开发中用过 node 吗，做了哪些，如何实现 koa 中间件，typeorm 解决的什么问题，数据库连接的一个工具，能够支持数据库的一些模型，本身支持 ts 编译自动生成 ts 类型定义有对应的 cri，比较方便也支持 es6 的一些语法
-- 使用 node 读取一个大文件，怎么控制读写速度的呢。stream，data
-- 事件循环
+- http 缓存原理，前端缓存了解哪些，网络缓存和前端缓存如何交互，说几个缓存相关的 HTTP 状态码
+- post 和 put 请求有什么区别
+- http 和 https 的区别
+- 数据上有安全性考虑吗，比如存储，比如说加密，秘钥生成，保存，加密解密，对 md5 使用吗，理解 md5 吗，唯一不可逆，断点上传，密码的保存，md5，加密，hash 一下
+- 三次握手，四次挥手，为什么挥手不能用三次
+- http1 和 http2 的区别， http2 做了那些改进，有哪些不足，http3 做了那些改进
+- https 加密过程
+- TCP 滑动窗口
+- TCP 重试机制
 
 # vue
 
@@ -86,6 +81,14 @@
 - vue-router 原理、模式区别，微信分享遇到问题
 
 - compiler 原理
+
+# node
+
+- 负载均衡、node 开启 cpu 个数的进程，并实现简单的负载均衡
+- a 模块引用了 b 模块 b 模块引用 a 模块，node 是怎么避免模块的循环引用的
+- 项目开发中用过 node 吗，做了哪些，如何实现 koa 中间件，typeorm 解决的什么问题，数据库连接的一个工具，能够支持数据库的一些模型，本身支持 ts 编译自动生成 ts 类型定义有对应的 cri，比较方便也支持 es6 的一些语法
+- 使用 node 读取一个大文件，怎么控制读写速度的呢。stream，data
+- 事件循环
 
 # TS
 
@@ -118,18 +121,6 @@
 - 如何实现一个 plugin 插件
 - 新能指标、RAIL
 
-# 小程序
-
-- 小程序的原理
-- 小程序传值方式
-- 小程序更新数据及如何优化这个更新数据的性能开销
-- 小程序内嵌 H5 传值、小程序如何传递 cookie 到 H5
-- 小程序多端如何实现
-- 小程序和 webview 内嵌有什么区别
-- 小程序中的 js 和浏览器中的 js 的区别
-- 微信 sdk 源码是否有看过
-- 小程序分包怎么用，分包的原理是什么
-
 # react
 
 - redux 源码
@@ -152,24 +143,12 @@
 - cdn 主要放了什么，index.html,css,js 文件放到哪里，有做缓存，浏览器缓存有更新和变化怎么办，浏览器缓存缓存多长时间
 - 有做 ssr，预渲染和 ssr 区别
 
-# HTTP
-
-- http 缓存原理，前端缓存了解哪些，网络缓存和前端缓存如何交互，说几个缓存相关的 HTTP 状态码
-- post 和 put 请求有什么区别
-- http 和 https 的区别
-- 数据上有安全性考虑吗，比如存储，比如说加密，秘钥生成，保存，加密解密，对 md5 使用吗，理解 md5 吗，唯一不可逆，断点上传，密码的保存，md5，加密，hash 一下
-- 三次握手，四次挥手，为什么挥手不能用三次
-- http1 和 http2 的区别， http2 做了那些改进，有哪些不足，http3 做了那些改进
-- https 加密过程
-- TCP 滑动窗口
-- TCP 重试机制
-
 # 安全
 
 - csrf
 
 # 优化
-
+https://mp.weixin.qq.com/s/9ifXga_Z4Q51SJbLgr4fPQ
 - 性能优化，你会从哪几个方面考虑性能优化
 
 - 打包优化
@@ -217,6 +196,7 @@
 - 图片处理时如果图片时倒过来的怎么处理
 - cicd 发布流程，前端做了什么
 - 如何解决跨域，cors，设置*后一直可以跨域吗，什么情况配*下不可以，如果配置是个域名，只返回个域名行吗
+- git merge rebase 区别
 
 # 手写
 
@@ -284,7 +264,9 @@ function fn(arr, n, sum)
 ```js
 // [1,2,3,6,7,3,'2','3','3'] 出现次数最多的项 出现了几次
 ```
-
+- 写一个正则表达式，校验 aabb...
+- 安全取值之类的
+- 封装 localstorage
 # 项目
 
 - electron vue3.0 vite ts
@@ -294,3 +276,15 @@ function fn(arr, n, sum)
 - 组件库、通用库
 - chrome 插件
 - vscode 插件
+
+# 小程序
+
+- 小程序的原理
+- 小程序传值方式
+- 小程序更新数据及如何优化这个更新数据的性能开销
+- 小程序内嵌 H5 传值、小程序如何传递 cookie 到 H5
+- 小程序多端如何实现
+- 小程序和 webview 内嵌有什么区别
+- 小程序中的 js 和浏览器中的 js 的区别
+- 微信 sdk 源码是否有看过
+- 小程序分包怎么用，分包的原理是什么
