--- a/面试题/HTTP/题.md
+++ b/面试题/HTTP/题.md
@@ -19,7 +19,7 @@
 ```
 GET 获取
 POST 获取通过服务器处理的实体主体
-PUT 更新传输文件
+PUT 更新传输文件(发两次请求，PUT两次请求结果一样，post 是增资源)
 DELETE 删除服务器资源
 CONNECTION 开启隧道连接代理
 OPTION 询问支持方法
@@ -157,6 +157,18 @@ HTTP 明文可被代理修改首部信息，不安全
 ```
 
 ## HTTP 缓存
+强缓存
+expires: 绝对时间 1.0
+cache-control: 1.1、相对时间
+  - no-cache 
+  - no-store
+  - public\private
+  - max-age
+  - s-maxage
+
+协商缓存 304
+etag if-none-match
+last-modify if-modify-since 秒
 ```
 Cache-Control
 ```
