--- a/题目/2021-07.md
+++ b/题目/2021-07.md
@@ -37,7 +37,7 @@ https://www.yuque.com/zaotalk/interview/iv3pyp#ehMC
 - ✅ 水平垂直居中
 - ✅ 几个简单的 css 问题：flex 布局、动画
 - 吸底组件的 fix 的兼容性怎么处理
-- position 那些值，作用什么
+- ✅ position 那些值，作用什么
 - BFC
 
 # html
@@ -50,10 +50,11 @@ https://www.yuque.com/zaotalk/interview/iv3pyp#ehMC
 - http 缓存原理，前端缓存了解哪些，网络缓存和前端缓存如何交互，说几个缓存相关的 HTTP 状态码
 - post 和 put 请求有什么区别
 - http 和 https 的区别
-- 数据上有安全性考虑吗，比如存储，比如说加密，秘钥生成，保存，加密解密，对 md5 使用吗，理解 md5 吗，唯一不可逆，断点上传，密码的保存，md5，加密，hash 一下
 - 三次握手，四次挥手，为什么挥手不能用三次
 - http1 和 http2 的区别， http2 做了那些改进，有哪些不足，http3 做了那些改进
 - https 加密过程
+- 数据上有安全性考虑吗，比如存储，比如说加密，秘钥生成，保存，加密解密，对 md5 使用吗，理解 md5 吗，唯一不可逆，断点上传，密码的保存，md5，加密，hash 一下
+
 - TCP 滑动窗口
 - TCP 重试机制
 
