--- a/面试题/js/18.深拷贝和浅拷贝.md
+++ b/面试题/js/18.深拷贝和浅拷贝.md
@@ -7,29 +7,35 @@ let tag = {name: 'tag'}
 object.assign(tag, { name: 'new', type: 'assign' })
 ```
 
-深
 ```js
+
 const a = {
   name: 'a',
   child: {
     name: 'child'
-  }
+  },
+  target: [1,2]
 }
-const deepClone = (obj, cache = new WeakMap()) => {
-  if (!obj) return '';
-  if (typeof obj !== 'object') return obj;
+a.target = a;
 
-  if(cache.get(obj)) return obj;
+const deepClone = (value, cache = new WeakMap()) => {
+  if  (!value) return value;
+  if (typeof value !== 'object') return value;
+  
+  if (cache.get(value))return cache.get(value);
 
-  const result = new obj.constrctor;
-  cache.set(obj, result)
+  let result = new value.constructor;
+  
+  cache.set(value, result);
 
-  Object.keys(obj).map(item => {
-    result[item] = deepClone(obj[item]);
-  });
+  Object.keys(value).map(item => {
+    result[item] = deepClone(value[item], cache);
+  })
   return result;
 }
-const b = deepClone(a);
-a.name = 'abc';
-console.log(b.name); // a
+const obj = deepClone(a);
+a.name = 'aa';
+
+console.log(obj) 
+console.log(obj.name) 
 ```
