--- a/面试题/js/8.闭包.md
+++ b/面试题/js/8.闭包.md
@@ -1,6 +1,6 @@
 # 闭包
 
-- 有权访问另一个函数作用域中的遍历的函数
+- 有权访问另一个函数作用域中的变量的函数
 - 一个函数访问了另一个函数的变量
 - 函数 A 内部有函数 B， B 可以访问到函数 A 变量，那么函数 B 就是闭包
 
@@ -82,3 +82,10 @@ var div = getId( 'div1' );
 ## 缺点
 
 - 使用不当容易造成内存泄露
+
+# 内存泄露
+- 闭包，未用到变量未及时释放
+- 定时器未释放
+- dom引用：dom删除时，引用未解除
+- 意外全局变量
+- 监听事件：未正确销毁
