--- a/面试题/js/9.手写 instanceof.md
+++ b/面试题/js/9.手写 instanceof.md
@@ -20,3 +20,17 @@ const myInstanceof = (left, target) => {
 console.log(myInstanceof(cat, Animation));
 console.log(myInstanceof(cat, Object));
 ```
+
+
+当 instaceof 前面是 str 原始数据类型的时候，回执行 [Symbol.hasInstance] 方法
+```js
+var str = 'test'
+// string[Symbol.hasInstance](str) ===> false
+
+class CustomStr {
+  [Symbol.hasInstance](x) {
+    return typeof x === 'string';
+  }
+}
+console.log('hello' instanceof CustomStr); // === true
+```
