--- a/题目/2021-07.md
+++ b/题目/2021-07.md
@@ -25,10 +25,15 @@
 
 - ✅ 21.ajax fetch axios 区别，ajax 实现原理, axios 原理是什么
 - ✅ 22.不用 promise, 那些可实现 promise generator
-- Promise 原理、方法，promise race all allsetted
-- ✅ 25.为什么原生的 form 表单提交没有跨域问题（form 请求和 ajax 请求有什么不同）
-- ✅ 26.防抖和节流应用场景
-- ✅ 27.new 操作符
+- 23.Promise 原理、方法，promise race all allsetted
+- ✅ 24.为什么原生的 form 表单提交没有跨域问题（form 请求和 ajax 请求有什么不同）
+- ✅ 25.防抖和节流应用场景
+- ✅ 26.new 操作符
+- ✅ 27.什么是作用域链，执行上下文
+- ✅ 28.[]+{}
+- ✅ 29.模块化
+- ✅ 30.箭头函数于普通函数区别
+- ✅ 31.柯里化
 
 https://www.yuque.com/zaotalk/interview/iv3pyp#ehMC
 
@@ -36,8 +41,8 @@ https://www.yuque.com/zaotalk/interview/iv3pyp#ehMC
 
 - ✅ 水平垂直居中
 - ✅ 几个简单的 css 问题：flex 布局、动画
-- 吸底组件的 fix 的兼容性怎么处理
 - ✅ position 那些值，作用什么
+- 吸底组件的 fix 的兼容性怎么处理
 - BFC
 
 # html
@@ -54,7 +59,6 @@ https://www.yuque.com/zaotalk/interview/iv3pyp#ehMC
 - http1 和 http2 的区别， http2 做了那些改进，有哪些不足，http3 做了那些改进
 - https 加密过程
 - 数据上有安全性考虑吗，比如存储，比如说加密，秘钥生成，保存，加密解密，对 md5 使用吗，理解 md5 吗，唯一不可逆，断点上传，密码的保存，md5，加密，hash 一下
-
 - TCP 滑动窗口
 - TCP 重试机制
 
