--- a/题目/2021-07.md
+++ b/题目/2021-07.md
@@ -36,22 +36,29 @@
 - ✅ 31.柯里化
 
 https://www.yuque.com/zaotalk/interview/iv3pyp#ehMC
+http://muyiy.cn/question/js/2.html
 
-# css
-
-- ✅ 水平垂直居中
-- ✅ 几个简单的 css 问题：flex 布局、动画
-- ✅ position 那些值，作用什么
-- 吸底组件的 fix 的兼容性怎么处理
-- BFC
-
-# html
-
-- 左边定宽度，右边自使用，高度填满整个屏幕
-- dom 树理解
+# vue
+- vue 响应式原理
+- vue 数组是否相应
+- 虚拟 dom
+- 全局注册组件
+- vue use 干了什么
+- 混入 minxi 的副作用
+- setup this
+- reactive ref 区别
+- 微前端
+- vue+ts 使用中有哪些坑
+- vue 项目多人协作如何实现统一管理
+- 手写封装一个组件，实现 checkebox 单选多选全选、以及 v-modles 数据双向绑定
+- vue 响应式的原理，为什么 vue3 中改成了 es6 的 proxy
+- vue 组件如何通讯
+- 按钮级别权限
+- diff 原理
+- vue-router 原理、模式区别，微信分享遇到问题
+- compiler 原理
 
 # HTTP
-
 - http 缓存原理，前端缓存了解哪些，网络缓存和前端缓存如何交互，说几个缓存相关的 HTTP 状态码
 - post 和 put 请求有什么区别
 - http 和 https 的区别
@@ -62,33 +69,7 @@ https://www.yuque.com/zaotalk/interview/iv3pyp#ehMC
 - TCP 滑动窗口
 - TCP 重试机制
 
-# vue
-
-- vue 响应式原理
-- vue 数组是否相应
-- 虚拟 dom
-- 全局注册组件
-- vue use 干了什么
-- 混入 minxi 的副作用
-
-- setup this
-- reactive ref 区别
-- 微前端
-- vue+ts 使用中有哪些坑
-- vue 项目多人协作如何实现统一管理
-- 手写封装一个组件，实现 checkebox 单选多选全选、以及 v-modles 数据双向绑定
-- vue 响应式的原理，为什么 vue3 中改成了 es6 的 proxy
-- vue 组件如何通讯
-- 按钮级别权限
-
-- diff 原理
-
-- vue-router 原理、模式区别，微信分享遇到问题
-
-- compiler 原理
-
 # node
-
 - 负载均衡、node 开启 cpu 个数的进程，并实现简单的负载均衡
 - a 模块引用了 b 模块 b 模块引用 a 模块，node 是怎么避免模块的循环引用的
 - 项目开发中用过 node 吗，做了哪些，如何实现 koa 中间件，typeorm 解决的什么问题，数据库连接的一个工具，能够支持数据库的一些模型，本身支持 ts 编译自动生成 ts 类型定义有对应的 cri，比较方便也支持 es6 的一些语法
@@ -96,7 +77,6 @@ https://www.yuque.com/zaotalk/interview/iv3pyp#ehMC
 - 事件循环
 
 # TS
-
 - ts 中的类型断言如何做的
 - 如何用 es5 或者 es6 实现 ts 中的接口 interface
 - ts 泛型【我主动提到的】
@@ -293,3 +273,20 @@ function fn(arr, n, sum)
 - 小程序中的 js 和浏览器中的 js 的区别
 - 微信 sdk 源码是否有看过
 - 小程序分包怎么用，分包的原理是什么
+
+
+# css
+
+- ✅ 水平垂直居中
+- ✅ 几个简单的 css 问题：flex 布局、动画
+- ✅ position 那些值，作用什么
+- 盒子模型
+- 圣杯、双飞翼布局
+- BFC\IFC\GFC 应用
+- css 多行...
+- display none opacity: 0 visibility:hidden
+- css3 属性
+- 
+# html
+- 左边定宽度，右边自使用，高度填满整个屏幕
+- 浏览器工作原理
