--- a/面试题/js/29.模块化.md
+++ b/面试题/js/29.模块化.md
@@ -10,7 +10,7 @@ CommonJS
 
 ESModule 是引用的导出
   - 编译时输出
-  - 默认导出是一个值，批量导出是一个地址
+  - export default 默认导出是一个值，export { a } 批量导出是一个地址
 
 ```js
 let x = 10;
