--- a/题目/2021-07.md
+++ b/题目/2021-07.md
@@ -45,18 +45,21 @@ http://muyiy.cn/question/js/2.html
 - 全局注册组件
 - vue use 干了什么
 - 混入 minxi 的副作用
+- vue 项目多人协作如何实现统一管理
+- vue 组件如何通讯
+- vue-router 原理、模式区别，微信分享遇到问题,vue-router路由模式有什么？实现原理是什么 hashchange，window.history.pushState
+- compiler 原理
+- diff 原理
+- vuex 的核心原理是什么
+- 按钮级别权限
+- axios 如何处理携带 cookies
+
 - setup this
 - reactive ref 区别
 - 微前端
 - vue+ts 使用中有哪些坑
-- vue 项目多人协作如何实现统一管理
 - 手写封装一个组件，实现 checkebox 单选多选全选、以及 v-modles 数据双向绑定
 - vue 响应式的原理，为什么 vue3 中改成了 es6 的 proxy
-- vue 组件如何通讯
-- 按钮级别权限
-- diff 原理
-- vue-router 原理、模式区别，微信分享遇到问题
-- compiler 原理
 
 # HTTP
 - http 缓存原理，前端缓存了解哪些，网络缓存和前端缓存如何交互，说几个缓存相关的 HTTP 状态码
@@ -68,6 +71,8 @@ http://muyiy.cn/question/js/2.html
 - 数据上有安全性考虑吗，比如存储，比如说加密，秘钥生成，保存，加密解密，对 md5 使用吗，理解 md5 吗，唯一不可逆，断点上传，密码的保存，md5，加密，hash 一下
 - TCP 滑动窗口
 - TCP 重试机制
+- TCP和UDP区别是什么？
+- TCP是怎么做到保证数据传输正确的
 
 # node
 - 负载均衡、node 开启 cpu 个数的进程，并实现简单的负载均衡
@@ -120,7 +125,7 @@ http://muyiy.cn/question/js/2.html
 
 # 浏览器
 
-- 浏览器渲染过程
+- ✅  浏览器渲染过程
 - 跨域的解决方案
 - 跨页面传输数据有哪些方式
 - 个二级域名不同 cookie 怎么传输
@@ -131,6 +136,7 @@ http://muyiy.cn/question/js/2.html
 # 安全
 
 - csrf
+- 前端在XSS、XSF防御是如何做的
 
 # 优化
 https://mp.weixin.qq.com/s/9ifXga_Z4Q51SJbLgr4fPQ
@@ -150,6 +156,7 @@ https://mp.weixin.qq.com/s/9ifXga_Z4Q51SJbLgr4fPQ
 - 白屏优化措施
 
 - CSS 相关性能优化
+- performance
 
 # 算法
 
@@ -164,6 +171,7 @@ https://mp.weixin.qq.com/s/9ifXga_Z4Q51SJbLgr4fPQ
 - 实现 36 进制的加法，0-9 加 a-z 不得直接使用 parseInt 转换十进制进行计算，如 '1b' + '0a' = 57
 - 获取字符串中有重复字符的字符和长度，没有的话返回
 - 斐波那契数列
+- 链表反转
 - https://codetop.cc/#/home
 
 # H5
@@ -252,6 +260,7 @@ function fn(arr, n, sum)
 - 写一个正则表达式，校验 aabb...
 - 安全取值之类的
 - 封装 localstorage
+
 # 项目
 
 - electron vue3.0 vite ts
@@ -286,7 +295,8 @@ function fn(arr, n, sum)
 - css 多行...
 - display none opacity: 0 visibility:hidden
 - css3 属性
-- 
+- grid 
 # html
 - 左边定宽度，右边自使用，高度填满整个屏幕
 - 浏览器工作原理
+- defer
